--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -29,8 +29,8 @@
  CANNOT_ACCESS_SYSTEM_TRIGGER:0 "Cannot access the $SYSTEM$ system"
  IS_LEADER_AGE:0 "อายุผู้นำ $COMPARATOR$ $NUM|Y$"
  IS_NOT_LEADER_AGE:0 "อายุผู้นำไม่ $COMPARATOR$ $NUM|Y$"
- IS_LEADER_LIFESPAN: "Leader lifespan is $COMPARATOR$ $NUM|Y$"
- IS_NOT_LEADER_LIFESPAN: "Leader lifespan NOT $COMPARATOR$ $NUM|Y$"
+ IS_LEADER_LIFESPAN: "อายุขัยผู้นำ $COMPARATOR$ $NUM|Y$"
+ IS_NOT_LEADER_LIFESPAN: "อายุขัยผู้นำ ไม่$COMPARATOR$ $NUM|Y$"
  IS_YEARS_OF_SERVICE:0 "อายุงานของผู้นำ $COMPARATOR$ $NUM|Y$ ปี"
  IS_NOT_YEARS_OF_SERVICE:0 "อายุงานของผู้นำ ไม่$COMPARATOR$ $NUM|Y$ ปี"
  DECLINE_CALLED_IN_FAVOR_TITLE:0 "ปฏิเสธการทวงบุญคุณ"
