--- a/mod/thmod/localisation/english/first_contact_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_l_english.yml
@@ -1592,7 +1592,7 @@
  string_observation_post_insight_gain:0 "Observation Outposts"
  string_observation_post_fan_xeno:0 "Fanatic Xenophile"
  string_observation_post_xeno:0 "Xenophile"
- string_observation_post_exploration_protocol:0 "Exploration Protocol"
+ string_observation_post_exploration_protocol:0 "โปรโตคอลการสำรวจ"
  string_observation_post_hands_off:0 "Hands Off Modifier"
  string_observation_post_gal_com:0 "Galactic Community Resolution"
  approach_study_insights:0 "Collect Insights"
@@ -1925,7 +1925,7 @@
  civic_hive_stargazers:0 "Stargazers"
  civic_hive_stargazers_desc:0 "Gazing with wonder at the night sky, this Hive has always yearned for exploration. In pursuit of this ambition, other forms of development were sidelined, and a small fleet of vessels capable of limited subspace travel was constructed."
  civic_hive_stargazers_effects:1 "$eager_explorers_base_effect$\nAdds the §H$trait_stargazer$§! trait.\nBegin with low Intel about your starting cluster."
- civic_machine_exploration_protocol:0 "Exploration Protocols"
+ civic_machine_exploration_protocol:0 "โปรโตคอลการสำรวจ"
  civic_machine_exploration_protocol_desc:0 "The foundation of this Machine Intelligence's central programming is the drive to catalog exoplanetary life. In pursuit of this directive, it has dedicated much of its resources to crafting a small fleet of vessels capable of limited subspace travel."
  civic_machine_exploration_protocol_effects:1 "$eager_explorers_base_effect$\nGain §G50%§! more Insight progress from observing pre-FTL Civilizations.\nGain £unity£§HUnity§! every time you finish establishing first contact."
  hyper_drive_plural:0 "hyper drives"
