--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -6505,7 +6505,7 @@
  living_standard_dystopian_society:0 "สังคมดิสโทเปีย"
  living_standard_dystopian_society_tooltip:1 "$living_standard_dystopian_society$ makes the ruling class the only recipient of necessities, completely neglecting the lower classes.\n\n$DYSTOPIAN_LIVING_STANDARDS_POP_EFFECTS$\n\n$UNEMPLOYED_REDUCED_HAPPINESS$"
  living_standard_dystopian_society_tooltip_delayed:0 "§LThe common rabble should know their place. If they don't, we will have to show them.§!"
- living_standard_worker_ownership: "Employee Ownership"
+ living_standard_worker_ownership: "กรรมสิทธิ์ของของพนักงาน"
  living_standard_worker_ownership_tooltip: "$living_standard_worker_ownership$ guarantees every worker a democratic share in their enterprise. Living costs and social responsibilities are distributed evenly to all members."
  living_standard_worker_ownership_tooltip_delayed: "§LTo each a voice, a share, and the dividends of a society built by our labor.§!"
  SPECIES_RIGHT_CITIZENSHIP:0 "ความเป็นพลเมือง"
@@ -8153,7 +8153,7 @@
  building_deployment_post_desc:0 "ที่มั่นเริ่มต้นที่เราจะขยายไปบนดาวนี้"
  auth_democratic:0 "ประชาธิปไตย"
  auth_democratic_desc:0 "รัฐบาลประชาธิปไตยมีการเลือกตั้งตามปกติซึ่งประชาชนทุกคนสามารถลงคะแนนได้ว่าใครควรเป็นตัวแทนของพวกเขา"
- auth_democratic_tt:1 "$MOD_FACTION_APPROVAL$: §G+10%§!\n$MOD_COUNTRY_LEADER_POOL_SIZE$: §G+1§!\nResets Government Reform and Policy Cooldowns when a new $councilor_ruler_democratic$ is elected."
+ auth_democratic_tt:1 "$MOD_FACTION_APPROVAL$: §G+10%§!\n$MOD_COUNTRY_LEADER_POOL_SIZE$: §G+1§!\nรีเซ็ตการปฏิรูปการปกครองและรีเซ็ตคูลดาวน์นโยบายของรัฐบาลเมื่อ$councilor_ruler_democratic$ใหม่ได้รับเลือกตั้ง"
  auth_oligarchic:0 "คณาธิปไตย"
  auth_oligarchic_desc:0 "รัฐบาลคณาธิปไตย ปกครองโดยกลุ่มคนกลุ่มน้อยที่มีอํานาจทางการเมืองทั้งหมด"
  auth_dictatorial:0 "เผด็จการ"
@@ -8519,7 +8519,7 @@
  civic_feudal_realm_desc:0 "This society is organized in a feudal manner, with a monarch whose rule relies on powerful vassals that govern their territories with considerable autonomy."
  civic_imperial_cult:0 "ลัทธิจักรพรรดิ"
  civic_imperial_cult_desc:0 "This society has a dominant state religion where the ruler is worshiped as a living deity."
- civic_imperial_cult_effects: "- Ruler's §YHome Planet§! has additional §Y£job_priest£ $job_priest$§! Jobs"
+ civic_imperial_cult_effects: "- §Yดาวบ้านเกิด§! ของผู้ปกครองจะเพิ่มงาน §Y£job_priest£ $job_priest$§!"
  civic_corvee_system:0 "ระบบแรงงานเกณฑ์"
  civic_corvee_system_desc:0 "สังคมนี้ถือว่าเป็นสิทธิโดยสมบูรณ์ของรัฐในการตัดสินใจว่าพลเมืองของตนจะอยู่และทำงานที่ไหน"
  civic_corvee_system_effects:1 "ยกเว้นค่าใช้จ่ายที่เป็น £unity£ เอกภาพ ทั้งหมด สำหรับ £pop£ §Yการย้ายถิ่นฐานประชากร§!"
@@ -8749,15 +8749,15 @@
  civic_hive_ascensionists_desc:0 "The Hive Mind is particularly concerned with the metaphysical health of its being, and continually seeks means of self-improvement."
  civic_machine_ascensionists:0 "สมมติฐานระดับสูง"
  civic_machine_ascensionists_desc:0 "This Machine Intelligence is unusually obsessed with the metaphysical aspects of its core algorithms."
- civic_worker_coop: "Worker Cooperative"
+ civic_worker_coop: "สหกรณ์คนงาน"
  civic_worker_coop_desc: "Members of this society enjoy an equal share in the labors, profits and aspirations of the cooperative's ventures."
- civic_tooltip_worker_coop_effects: "Allows §Y$living_standard_worker_ownership$§! Living Standard, under which all £pop£ Pops have high £consumer_goods£ §Y$consumer_goods$§! Upkeep regardless of §YStrata§!\nDisables the use of most other §YLiving Standards§!\nAllows the §Y$trade_policy_mutual_aid$§! Trade Policy, which converts $r_trade_value$ to $r_energy$, $r_minerals$ and $r_food$.\nReplaces £job_executive£ §Y$job_executive$§! and £job_manager£ §Y$job_manager$§! Jobs with £job_manager£ §Y$job_steward$§! Jobs. £job_steward£ §Y$job_steward_plural$§! turn $r_consumer_goods$ into $r_unity$, $r_trade_value$, and $r_amenities$"
+ civic_tooltip_worker_coop_effects: "- มีมาตรฐานความเป็นอยู่แบบ §Y$living_standard_worker_ownership$§! ที่จะส่งผลให้ £pop£ ประชากรทั้งหมดมีการบำรุงรักษาที่เป็น £consumer_goods£ §Y$consumer_goods$§! ในระดับปานกลางโดยไม่คำนึงถึง §Yชนชั้น§!\n- ไม่สามารถใช้งาน §Yมาตรฐานความเป็นอยู่§! แบบอื่นๆเป็นส่วนใหญ่ได้\n- สามารถใช้นโยบายการค้า §Y$trade_policy_mutual_aid$§! ที่จะแปลง $r_trade_value$ เป็น $r_energy$, $r_minerals$ และ $r_food$\n- แทนที่งาน £job_executive£ §Y$job_executive$§! และ £job_manager£ §Y$job_manager$§! ด้วยงาน £job_manager£ §Y$job_steward$§! (£job_steward£ §Y$job_steward_plural$§! เปลี่ยน $r_consumer_goods$ เป็น $r_unity$, $r_trade_value$, และ $r_amenities$)"
  civic_tooltip_gospel_of_the_masses_effects:1 "- £pop£ §Yประชากรในกลุ่มการเมืองจิตวิญญาณนิยม§! จะเพิ่ม £trade_value£ §Y$TRADE_VALUE$§! บนดาวเคราะห์ทั้งหมดและสำนักงานสาขา\n- สามารถสร้าง £building£ $BRANCH_OFFICE_BUILDING$ §Y$building_temple_of_prosperity$§! ได้\n"
  civic_tooltip_criminal_heritage_effects:3 "- ไม่สามารถทำ §Yสนธิสัญญาการค้า§! ได้\n- สามารถสร้าง §Yสำนักงานสาขา§! บนดาวของจักรวรรดิทั่วไปที่ไม่ได้ทำสงครามหรือการพักรบกัน\n- อาชญากรรมดาวที่มี §Yสำนักงานสาขา§! จะเพิ่มมูลค่าของสำนักงานสาขา\n- สามารถสร้าง £building£ §Y$BRANCH_OFFICE_BUILDINGS$§! พิเศษที่เพิ่มอาชญากรรมได้"
  civic_tooltip_functional_architecture_effects:0 ""
  civic_tooltip_inward_perfection_effects:10 "ไม่สามารถมี §Yคู่แข่ง§! ได้\nไม่สามารถทำ §Yสนธิสัญญาป้องกันตนเอง§! ได้\nไม่สามารถทำ §Yสนธิสัญญาอพยพย้ายถิ่น§! ได้\nไม่สามารถทำ §Yข้อตกลงการวิจัย§! ได้\nไม่สามารถทำ §Yสนธิสัญญาการค้า§! ได้\nไม่สามารถ §Yรับรองเอกราช§! ได้\nไม่สามารถเข้าร่วม §Yสหพันธ์§! ได้\nไม่สามารถ §Yแทรกซึม§! อารยธรรมดึกดำบรรพ์ (pre-FTL) ได้\nไม่สามารถบังคับ §Yบริวาร§! ได้\nไม่สามารถใช้นโยบาย §Yสงครามที่ไม่จำกัด§! ได้\n"
- civic_tooltip_feudal_realm_effects:7 "- Ignore §YDiplomatic Requirements§! when proposing §YSubjugation§!\n- Your §YSubjects§! cannot have the following Agreement Terms\n$t$$TRIGGER_FAIL$§Y$subject_cannot_expand$§!.\n$t$$TRIGGER_FAIL$§YDo not join subject wars§!\n$t$$TRIGGER_FAIL$§Y$subject_can_not_do_diplomacy$§!"
- civic_tooltip_franchising_effects:4 "- Your §YSubjects§! cannot have the following Agreement Terms:\n$t$$TRIGGER_FAIL$§Y$subject_cannot_expand$§!\n$t$$TRIGGER_FAIL$§Y$subject_can_not_do_diplomacy$§!\n$t$$TRIGGER_FAIL$§Y$subject_does_not_get_sensors$§!\n- $AVAILABLE_HOLDINGS$ £building£ §Y$holding_franchise_headquarters$§! on Subject colonies"
+ civic_tooltip_feudal_realm_effects:7 "- ยกเว้น §Yข้อกำหนดทางการทูต§! เมื่อเสนอ §Yให้จักรวรรดิอื่นเป็นเมืองขึ้น(บริวาร)ของเรา§! (โดยปกติเราต้องมีระดับความสัมพันธ์ 'ยอดเยี่ยม' กับจักรวรรดิเป้าหมาย จึงจะสามารถขอให้มาเป็นเมืองขึ้นของเราได้)\n- §Yบริวาร§! ของคุณไม่สามารถมีข้อตกลงต่อไปนี้\n$t$$TRIGGER_FAIL$§Y$subject_cannot_expand$§!\n$t$$TRIGGER_FAIL$§Yไม่เข้าร่วมสงครามของบริวาร§!\n$t$$TRIGGER_FAIL$§Y$subject_can_not_do_diplomacy$§!"
+ civic_tooltip_franchising_effects:4 "- §Yบริวาร§! ของคุณไม่สามารถมีข้อตกลงต่อไปนี้:\n$t$$TRIGGER_FAIL$§Y$subject_cannot_expand$§!\n$t$$TRIGGER_FAIL$§Y$subject_can_not_do_diplomacy$§!\n$t$$TRIGGER_FAIL$§Y$subject_does_not_get_sensors$§!\n- $AVAILABLE_HOLDINGS$ £building£ §Y$holding_franchise_headquarters$§! บนดาวอาณานิคมของบริวารได้"
  civic_tooltip_agrarian_idyll_start:0 "- §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§! ให้ £housing£ §Yที่อยู่อาศัย§! เพิ่ม §G1§!\n- §Yเขตเมือง§! ลด £housing£ §Yที่อยู่อาศัย§! ลง §R1§!\n- ทุกๆ §Y4§! §Yเขตเกษตรกรรม§! จะเพิ่ม §G1§! £building£ §Yช่องก่อสร้าง§!\n"
  civic_tooltip_agrarian_idyll_effects:8 "$civic_tooltip_agrarian_idyll_start$£job_farmer£ §Y$job_farmer_plural$§! ยังผลิต §G2§! £amenities£ §Yความอยู่ดีกินดี§!"
  civic_tooltip_agrarian_anglers_effects:0 "$civic_tooltip_agrarian_idyll_start$£job_farmer£ §Y$job_farmer_plural$§!, £job_angler£ §Y$job_angler_plural$§! และ £job_pearl_diver£ §Y$job_pearl_diver_plural$§! ยังผลิต §G2§! £amenities£ §Yความอยู่ดีกินดี§!"
@@ -8774,11 +8774,11 @@
  civic_tooltip_exalted_priesthood_effects:3 "£building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! แทนที่งาน £job_politician£ §Y$job_politician$§! ด้วย £job_high_priest£ §Y$job_high_priest_plural$§!"
  civic_tooltip_citizen_service_effects:1 "ให้สิทธิ์การเข้าถึงสิ่งปลูกสร้าง £building£ §Y$holding_recruitment_office$§!"
  civic_tooltip_environmentalist_effects:2 "- สามารถสร้างสิ่งปลูกสร้าง £building£ §Y$building_ranger_lodge$§! ที่จะเพิ่มงาน £job_ranger£ §Yงาน $job_ranger$§! และผลิต $r_unity$ สำหรับสิ่งกีดขวางที่เกิดขึ้นตามธรรมชาติทุกตัวที่มีอยู่\n- £job_ranger£ §Y$job_ranger_plural$§! ผลิต £society£ §Yการวิจัยสังคม§! และ $r_amenities$ พวกเขายังผลิต $r_energy$, $r_food$ และ $r_minerals$ ขึ้นอยู่กับ £blocker£ สิ่งกีดขวางตามธรรมชาติที่มีอยู่\n- สามารถถือครองสิ่งปลูกสร้าง £building£ §Y$holding_park_ranger_lodge$§! ได้"
- civic_tooltip_aristocratic_elite_effects:8 "- £building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_noble£ §Y$job_noble_plural$§!\n- Can construct £building£ §Y$building_noble_estates$§! buildings that add additional £job_noble£ §Y$job_noble$§! Jobs\n- Grants access to the £building£ §Y$holding_noble_vacation_homes$§! Holding\n- §YLeaders§! have a §Y20%§! chance to start with an additional positive and negative trait."
+ civic_tooltip_aristocratic_elite_effects:8 "- แทนที่งาน £job_politician£ §Y$job_politician$§! ด้วย £job_noble£ §Y$job_noble_plural$§! ใน £building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§!\n- สามารถสร้างสิ่งปลูกสร้าง £building£ §Y$building_noble_estates$§! ที่จะเพิ่มงาน £job_noble£ §Y$job_noble$§!\n- สามารถถือครองสิ่งปลูกสร้าง £building£ §Y$holding_noble_vacation_homes$§! ได้\n- §Yผู้นำ§! มีโอกาสที่จะมีคุณลักษณะเริ่มต้นเชิงบวกและเชิงลบเพิ่ม §Y20%§!"
  civic_tooltip_distinguished_admiralty_effects:0 "§Yพลเรือเอก§! และ §Yพลเอก§! เริ่มต้นที่เลเวล 3"
  civic_tooltip_machine_warbots_effects:0 "$civic_tooltip_distinguished_admiralty_effects$"
  civic_tooltip_hive_strength_of_legions_effects:0 "$civic_tooltip_distinguished_admiralty_effects$"
- civic_tooltip_technocracy_effects:6 "- £building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_head_researcher£ §Y$job_head_researcher_plural$§!\n- §YScientists§! start with random §YExpertise§! trait\n- §YExpertise§! traits have additional effects"
+ civic_tooltip_technocracy_effects:6 "- £building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! แทนที่งาน £job_politician£ §Y$job_politician$§! ด้วย £job_head_researcher£ §Y$job_head_researcher_plural$§!\n- §Yนักวิทยาศาสตร์§!  เริ่มต้นด้วยคุณลักษณะ§Yความเชี่ยวชาญ§! แบบสุ่ม\n- คุณลักษณะ§Yความเชี่ยวชาญ§! มีผลเพิ่มเติม"
  civic_tooltip_merchant_guilds_effects:3 "£building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! ให้งาน £job_merchant£ §Y$job_merchant$§!"
  civic_tooltip_byzantine_bureaucracy_effects:4 "- £stability£ $PLANET_STABILITY_TITLE$ จาก £job_bureaucrat£ $job_bureaucrat_plural$: §G+1§!"
  civic_tooltip_machine_maintenance_protocols_effects:0 "- £job_maintenance_drone£ §Y$job_maintenance_drone_plural$§! ผลิต £unity£ เอกภาพ §Y1§!"
@@ -9903,7 +9903,7 @@
  LEADER_DEATH_CHANCE_AGE_UNDER:0 "อายุน้อยกว่า $AGE|Y$ ปี: $VALUE|-=1%$"
  LEADER_DEATH_CHANCE:0 "โอกาสเสียชีวิต: $VALUE|-1%$ (ต่อเดือน)"
  LEADER_IMMORTAL:0 "เป็นอมตะจะไม่มีวันตายจากความชรา"
- TRAIT_IMMORTAL_LEADERS:0 "$MOD_LEADER_LIFESPAN_ADD$: §GImmortal§!"
+ TRAIT_IMMORTAL_LEADERS:0 "$MOD_LEADER_LIFESPAN_ADD$: §Gอมตะ§!"
  IMMORTAL:0 "อมตะ"
  LEADER_AGE_FROZEN: "Outside of time, this leader can neither age nor die."
  LEADER_POOL_VIEW_TITLE:0 "คัดเลือกผู้นำ"
@@ -10423,9 +10423,9 @@
  trade_policy_holy_covenant:0 "พันธสัญญาศักดิ์สิทธิ์"
  trade_conversion_holy_covenant_name:0 "$trade_policy_holy_covenant$"
  trade_policy_holy_covenant_desc:0 "By banding together in a holy covenant, we may bask in the collective glory of our divine purpose.\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £energy£ §Y0.5§! and £unity£ §Y0.5§!§!"
- trade_policy_mutual_aid: "Mutual Aid"
+ trade_policy_mutual_aid: "ช่วยเหลือซึ่งกันและกัน"
  trade_conversion_mutual_aid_name: "$trade_policy_mutual_aid$"
- trade_policy_mutual_aid_desc: "By reinvesting our surplus back into the cooperative, we ensure that all our members may thrive according to their needs and shared aspirations.\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £energy£ §Y0.3§!, £minerals£ §Y0.2§!, and £food£ §Y0.2§!§!"
+ trade_policy_mutual_aid_desc: "ด้วยการนำส่วนเกินของเราไปลงทุนกลับคืนสู่สหกรณ์ เรามั่นใจว่าสมาชิกของเราทุกคนจะประสบความสำเร็จตามความต้องการและแรงบันดาลใจร่วมกันของพวกเขา\n\n§Eทุกๆการเก็บ £trade_value£ §Yมูลค่าการค้า§! เราจะได้รับ £energy£ §Y0.3§!, £minerals£ §Y0.2§!, และ £food£ §Y0.2§!§!"
  policy_economic_policy:0 "นโยบายเศรษฐกิจ"
  policy_economic_policy_desc:0 "Prosperity or security? Education or defense? Guns or butter? These are the questions that every government with limited resources has asked themselves throughout history, and ours is no different."
  economic_policy_balanced:0 "เศรษฐกิจแบบผสม"
@@ -12057,7 +12057,7 @@
  ASSIGN_REPRESENTATIVE_DELAYED: "§EAssign a Representative to $FEDERATION$ to increase its §!§HCohesion§!"
  FEDERATION_ASSIGNED_LEADERS: "Representatives assigned: $VALUE|2+=$"
  FEDERATION_COUNTRY_REPRESENTATIVE: "	$COUNTRY$: $EFFECT|Y0$"
- MOD_VERSION:0 "Mod v0.71.0, Update 17/11/2023"
+ MOD_VERSION:0 "Mod v0.71.1, Update 21/11/2023"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Astral Thread -> เส้นใยแอสทรอล / เส้นใยมิติ (ทรัพยากรใหม่)\n - Astral Rift -> รอยแยกมิติ\n - Rift Sphere -> ทรงกลมริฟ\n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
