--- a/mod/thmod/localisation/english/leaders_l_english.yml
+++ b/mod/thmod/localisation/english/leaders_l_english.yml
@@ -6,7 +6,7 @@
  OFFICIAL_TEXTICON: "£official£"
  GOVERNOR_TEXTICON:0 "£official£"
  NOCLASS_TEXTICON:0 "£noclass£"
- veteran_class:0 "Veteran Class"
+ veteran_class:0 "คลาสมีประสบการณ์"
  general_subclass:2 "£general£ §v$veteran_class$§!"
  commander_subclass: "£commander£ §v$veteran_class$§!"
  governor_subclass:2 "£official£ §v$veteran_class$§!"
@@ -26,79 +26,79 @@
  scholar_subclass_tt: "§GVeteran Class focused on investigating anomalies and dig sites§!"
  governor_subclass_tt: "§GVeteran Class focused on Governor Traits§!"
  councilor_subclass_tt:0 "§GVeteran Class focused on Councilor Traits§!"
- subclass_commander_admiral: "Admiral"
+ subclass_commander_admiral: "พลเรือเอก"
  subclass_commander_admiral_desc: "The stoic presence of a decisive Admiral steels the nerves of the crew as they engage the enemy."
  subclass_commander_admiral_hive: "$subclass_commander_admiral$"
  subclass_commander_admiral_hive_desc: "The presence of a dedicated Admiral drone ensures the fleet remains cohesive as it engages the enemy."
  subclass_commander_admiral_machine: "$subclass_commander_admiral$"
  subclass_commander_admiral_machine_desc: "The presence of a dedicated Admiral unit ensures the fleet remains synchronized as it engages the enemy."
  commander_admiral_subclass: "§GVeteran Class focused on fleets and naval combat§!"
- subclass_commander_general: "General"
+ subclass_commander_general: "พลเอก"
  subclass_commander_general_desc: "The presence of a General allows for improved coordination of planetary invasions."
  subclass_commander_general_hive: "$subclass_commander_general$"
  subclass_commander_general_hive_desc: "$subclass_commander_general_desc$"
  subclass_commander_general_machine: "$subclass_commander_general$"
  subclass_commander_general_machine_desc: "$subclass_commander_general_desc$"
  commander_general_subclass: "§GVeteran Class focused on assaulting starbases, planetary bombardment ande planetary invasion§!"
- subclass_commander_governor: "Commissioner"
+ subclass_commander_governor: "ข้าหลวง"
  subclass_commander_governor_desc: "Commissioners specialize in imposing order through force, governing planets and sectors with military rigor and a strong vision."
  subclass_commander_governor_hive: "$subclass_commander_governor$"
  subclass_commander_governor_hive_desc: "$subclass_commander_governor_desc$"
  subclass_commander_governor_machine: "$subclass_commander_governor$"
  subclass_commander_governor_machine_desc: "$subclass_commander_governor_desc$"
- subclass_commander_councilor:0 "Strategist"
+ subclass_commander_councilor:0 "นักยุทธศาสตร์"
  subclass_commander_councilor_desc:0 "Strategists are focused on the bigger picture. Instead of leading the battle up front, they prefer to maintain cohesion in the military and draw galaxy-spanning war plans."
  subclass_commander_councilor_hive:0 "$subclass_commander_councilor$"
  subclass_commander_councilor_hive_desc:0 "$subclass_commander_councilor_desc$"
  subclass_commander_councilor_machine:0 "$subclass_commander_councilor$"
  subclass_commander_councilor_machine_desc:0 "$subclass_commander_councilor_desc$"
- subclass_official_delegate: "Delegate"
+ subclass_official_delegate: "ตัวแทน/ผู้รับมอบสิทธิ์"
  subclass_official_delegate_desc: "As the public face of our empire, Delegates represent our interests in Federations and in the Galactic Community."
- subclass_official_delegate_hive: "Delegate"
+ subclass_official_delegate_hive: "ตัวแทน/ผู้รับมอบสิทธิ์"
  subclass_official_delegate_hive_desc: "$subclass_official_delegate_desc$"
- subclass_official_delegate_machine: "Delegate"
+ subclass_official_delegate_machine: "ตัวแทน/ผู้รับมอบสิทธิ์"
  subclass_official_delegate_machine_desc: "$subclass_official_delegate_desc$"
- subclass_official_diplomacy_councilor: "Ambassador"
+ subclass_official_diplomacy_councilor: "เอกอัครราชทูต"
  subclass_official_diplomacy_councilor_desc: "Ambassadors maintain our relationships with other empires, both overtly and in more subtle ways. The art of diplomacy and the subtle craft of espionage both fall under their domain."
  subclass_official_diplomacy_councilor_hive: "$subclass_official_diplomacy_councilor$"
  subclass_official_diplomacy_councilor_hive_desc: "$subclass_official_diplomacy_councilor_desc$"
  subclass_official_diplomacy_councilor_machine: "$subclass_official_diplomacy_councilor$"
  subclass_official_diplomacy_councilor_machine_desc: "$subclass_official_diplomacy_councilor_desc$"
- subclass_official_governor:0 "Industrialist"
+ subclass_official_governor:0 "นักอุตสาหกรรม"
  subclass_official_governor_desc:1 "Knowledge and skills in maintaining production quotas or material procurement come naturally to this leader."
  subclass_official_governor_hive:0 "Production Oversight"
  subclass_official_governor_hive_desc:2 "This drone was selectively bred to guide others in the production process."
- subclass_official_governor_machine:0 "Efficiency Loop"
+ subclass_official_governor_machine:0 "ลูปประสิทธิภาพ"
  subclass_official_governor_machine_desc:1 "This unit is equipped to isolate and delete inefficient production patterns."
- subclass_official_economy_councilor:0 "Advisor"
+ subclass_official_economy_councilor:0 "ที่ปรึกษา"
  subclass_official_economy_councilor_desc:1 "The budget of our empire is in the hand of our Advisors, a class of leaders who specialize in economic theory."
  subclass_official_economy_councilor_hive:0 "$subclass_official_economy_councilor$"
  subclass_official_economy_councilor_hive_desc:1 "$subclass_official_economy_councilor_desc$"
  subclass_official_economy_councilor_machine:0 "$subclass_official_economy_councilor$"
  subclass_official_economy_councilor_machine_desc:1 "$subclass_official_economy_councilor_desc$"
- subclass_scientist_explorer:0 "Explorer"
+ subclass_scientist_explorer:0 "นักสำรวจ"
  subclass_scientist_explorer_desc:1 "To explore unknown worlds, catalog new species, and encounter new civilizations: this leader is the embodiment of such ideals."
- subclass_scientist_explorer_hive:0 "Explorer"
+ subclass_scientist_explorer_hive:0 "นักสำรวจ"
  subclass_scientist_explorer_hive_desc:1 "To explore unknown worlds, catalog new species, and encounter new civilizations: the guiding impulse of this intrepid drone."
- subclass_scientist_explorer_machine:0 "Explorer"
+ subclass_scientist_explorer_machine:0 "นักสำรวจ"
  subclass_scientist_explorer_machine_desc:1 "To explore unknown worlds, catalog new species, and encounter new civilizations: the guiding programming of this intrepid unit."
- subclass_scientist_scholar: "Scholar"
+ subclass_scientist_scholar: "นักวิชาการ"
  subclass_scientist_scholar_desc: "The galaxy is full of mysteries, and Scholars exist to solve them. These adventurous researchers excel in the study of dig sites, spacial anomalies and other mysteries."
  subclass_scientist_scholar_hive: "$subclass_scientist_scholar$"
  subclass_scientist_scholar_hive_desc: "$subclass_scientist_scholar_desc$"
  subclass_scientist_scholar_machine: "$subclass_scientist_scholar$"
  subclass_scientist_scholar_machine_desc: "$subclass_scientist_scholar_desc$"
- subclass_scientist_governor:0 "Analyst"
+ subclass_scientist_governor:0 "นักวิเคราะห์"
  subclass_scientist_governor_desc:0 "Being at the forefront of science, conducting experiments, and researching new technologies to better the empire is the main concern of any determined Analyst."
- subclass_scientist_governor_hive:0 "Analyst"
+ subclass_scientist_governor_hive:0 "นักวิเคราะห์"
  subclass_scientist_governor_hive_desc:2 "Being at the forefront of science, conducting experiments, and researching new technologies to better the hive are the main concerns of an analyst drone."
- subclass_scientist_governor_machine:0 "Analyst"
+ subclass_scientist_governor_machine:0 "นักวิเคราะห์"
  subclass_scientist_governor_machine_desc:1 "Being at the forefront of science, conducting experiments, and researching new technologies to improve efficiency are the main concerns for any determined analyst unit."
- subclass_scientist_councilor: "Statistician"
+ subclass_scientist_councilor: "นักสถิติ"
  subclass_scientist_councilor_desc: "Statisticians are the driving force behind the management of research teams and projects. Focusing on new technologies, these individuals pursue knowledge relentlessly."
- subclass_scientist_councilor_hive: "Statistician"
+ subclass_scientist_councilor_hive: "นักสถิติ"
  subclass_scientist_councilor_hive_desc: "Statisticians are the main driving force behind the management of research teams and projects. These drones pursue knowledge relentlessly."
- subclass_scientist_councilor_machine: "Statistician"
+ subclass_scientist_councilor_machine: "นักสถิติ"
  subclass_scientist_councilor_machine_desc: "Statisticians are the main driving force behind the management of research teams and projects. These units pursue knowledge relentlessly."
  leader_trait_ignore_leader_cap_tt: "$t$Does not count towards Leader Capacity"
  leader_trait_scout:0 "Scout"
