--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -1105,7 +1105,7 @@
  job_administrator_plural_with_icon:0 "£job_bureaucrat£ ผู้บริหาร"
  job_priest_and_steward_with_icon: "[GetPriestIcon] [GetPriest] and £job_manager£ $job_steward$"
  job_steward_with_icon: "£job_manager£ $job_steward$"
- job_priest_and_steward_plural_with_icon: "[GetPriestIcon] [GetPriestPlural] and £job_manager£ $job_steward_plural$"
+ job_priest_and_steward_plural_with_icon: "[GetPriestIcon] [GetPriestPlural] และ £job_manager£ $job_steward_plural$"
  job_steward_plural_with_icon: "£job_manager£ $job_steward_plural$"
  job_chemist:0 "นักเคมี"
  job_chemist_plural:0 "นักเคมี"
@@ -1143,13 +1143,13 @@
  mod_job_manager_add:0 "งาน $job_manager$"
  mod_job_manager_per_pop:0 "§G+1§! อาชีพ $job_manager$ ต่อ $VALUE$ ประชากร"
  mod_job_manager_per_pop_short:0 "\n§G+1§! £mod_job_manager_add£ ต่อ $VALUE$ £pop£"
- job_steward: "Steward"
- job_steward_plural: "Stewards"
+ job_steward: "สจ๊วต"
+ job_steward_plural: "สจ๊วต"
  job_steward_desc: "These democratically-elected volunteers ensure the smooth running of our cooperative society, for the benefit of all its members."
  job_steward_effect_desc: "£job_steward£ $job_steward_plural$ เปลี่ยน $r_consumer_goods$ เป็น $r_unity$, $r_trade_value$, และ $r_amenities$"
- mod_job_steward_add:0 "$job_steward$ Jobs"
- mod_job_steward_per_pop:0 "§G+1§! $job_steward$ Job per $VALUE$ Pops"
- mod_job_steward_per_pop_short:0 "\n§G+1§! £mod_job_steward_add£ per $VALUE$ £pop£"
+ mod_job_steward_add:0 "งาน $job_steward$"
+ mod_job_steward_per_pop:0 "§G+1§! งาน $job_steward$ ต่อ $VALUE$ ประชากร"
+ mod_job_steward_per_pop_short:0 "\n§G+1§! £mod_job_steward_add£ ต่อ $VALUE$ £pop£"
  job_bureaucrat:0 "ข้าราชการ"
  job_bureaucrat_plural:0 "ข้าราชการ"
  job_bureaucrat_desc:0 "Fulfilling the bureaucratic demands of an empire is a daunting task that requires dedicated and highly trained individuals."
@@ -2881,7 +2881,7 @@
  col_capital:0 "ศูนย์กลางจักรวรรดิ"
  col_capital_desc:0 "ดาวเคราะห์ศูนย์กลางของจักรวรรดิระหว่างดวงดาว เป็นที่ตั้งของสิ่งปลูกสร้างของรัฐบาลที่ปกครองจักรวรรดิ สำนักงานและศูนย์บัญชาการใหญ่ของหน่วยงานที่ซับซ้อนมากมาย"
  col_capital_machine:0 "ศูนย์กลางเครื่องจักร"
- col_capital_machine_desc:2 "The Capital planet of a Machine Intelligence is the primary locus of its central networked consciousness."
+ col_capital_machine_desc:2 "ดาวเคราะห์ศูนย์กลางของเครื่องจักรทรงภูมิปัญญา เป็นจุดหลักของจิตสำนึกที่เชื่อมโยงเครือข่ายส่วนกลาง"
  col_capital_hive:0 "รังศูนย์กลาง"
  col_capital_hive_desc:1 "The Capital planet of a Hive Mind is the primary seat of the Mind, from where the collective's thoughts and actions spring."
  col_default:0 "อาณานิคม"
