--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -112,7 +112,7 @@
  MOD_COUNTRY_NAVAL_CAPACITY_CONTRIBUTION_TO_OVERLORD_MULT:0 "มอบความจุของยานรบให้กับเจ้าเหนือหัว"
  MOD_COUNTRY_SUBJECT_TRIBUTE_MULT:0 "ภาษีของบริวาร"
  MOD_COUNTRY_SUBJECT_TECHNOLOGY_SHARING_MULT:0 "การแบ่งปันเทคโนโลยี"
- mod_divided_patrongage_max_subjects: "Subjects Exempt from Divided Patronage"
+ mod_divided_patrongage_max_subjects: "เจ้าเหนือหัวสามารถมีบริวารได้เพิ่มขึ้น (โดยไม่ได้รับโทษของการมีหลายบริวาร)"
  MOD_COUNTRY_EXPANSION_DISTANCE_MULT:0 "ระยะทางการขยายเขตแดน"
  MOD_COUNTRY_CLAIM_DISTANCE_MULT:0 "ระยะทางการอ้างสิทธิ์"
  MOD_COUNTRY_GOVERNMENT_CIVIC_POINTS_ADD:0 "ช่องพลเมือง"
@@ -446,7 +446,7 @@
  mod_planet_buildings_strongholds_cost_mult:0 "ค่าใช้จ่ายป้อมปราการ"
  mod_planet_metallurgists_upkeep_mult:1 "ค่าบำรุงรักษา [GetAlloyProducer]"
  mod_planet_artisans_upkeep_mult:1 "ค่าบำรุงรักษา [GetArtisan]"
- mod_planet_researchers_upkeep_mult:1 "[GetResearcherPluralWithIcon] Upkeep"
+ mod_planet_researchers_upkeep_mult:1 "ค่าบำรุงรักษา [GetResearcherPluralWithIcon]"
  mod_planet_refiners_upkeep_mult:0 "ค่าบำรุงรักษานักสกัดแร่"
  mod_planet_chemists_upkeep_mult:0 "ค่าบำรุงรักษานักเคมี"
  mod_planet_translucers_upkeep_mult:0 "ค่าบำรุงรักษานักสกัดผลึกแร่หายาก"
@@ -497,7 +497,7 @@
  MOD_COUNTRY_NAVAL_COVERAGE_MULT:0 "$navy_coverage$"
  MOD_LEADER_RULER_SKILL_LEVELS:0 "เลเวลผู้ปกครองสูงสุด"
  MOD_LEADER_SKILL_LEVELS:0 "เลเวลผู้นำสูงสุด"
- MOD_LEADER_LIFESPAN_ADD: "Leader Lifespan"
+ MOD_LEADER_LIFESPAN_ADD: "อายุขัยผู้นำ"
  MOD_LEADER_LIFESPAN_MULT: "$MOD_LEADER_LIFESPAN_ADD$"
  MOD_LEADER_STARTING_AGE_ADD: "Leader Starting Age"
  MOD_LEADER_STARTING_AGE_MULT: "Leader Starting Age"
@@ -620,7 +620,7 @@
  mod_country_resource_physics_research_mult:0 "การวิจัยทางฟิสิกส์"
  mod_country_resource_society_research_mult:0 "การวิจัยทางสังคม"
  mod_country_resource_engineering_research_mult:0 "การวิจัยทางวิศวกรรม"
- mod_subjects_unity_produces_add: "£unity£ $unity$ from Subjects"
+ mod_subjects_unity_produces_add: "£unity£ $unity$ จากบริวาร"
  mod_country_subjects_resource_unity_mult:0 "$tr_domination_vassal_acculturation$"
  mod_country_subjects_resource_unity_max_mult:0 "ผลสูงสุด $tr_domination_vassal_acculturation$"
  mod_country_federation_member_resource_unity_mult:0 "$tr_diplomacy_federal_unity$"
