--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -510,7 +510,7 @@
  holding_idyllic_bloom_desc:0 "Hyper-advanced terraforming techniques mastered by the Overlord are housed in this structure. After being introduced to the planet, it will take a decade to finish its world-changing work."
  holding_idyllic_bloom_effect_timer:0 "Will finish terraforming on §Y[Planet.idyllic_bloom_holding_timer]§!."
  holding_idyllic_bloom_effect:0 "Will finish terraforming §Y10§! years after construction."
- holding_reemployment_center:0 "Reemployment Center"
+ holding_reemployment_center:0 "ศูนย์จัดหางานครั้งใหม่"
  holding_reemployment_center_desc:1 "Never leave a resource unexploited, even if that resource is the Subject's dead. With the Reemployment Center, the Overlord can ensure that the Subject's planets are always filled with employees even though the quality of work might vary."
  holding_reemployment_center_effect:0 "\nA new £pop£ §YZombie Pop§! will be reanimated on §Y[Planet.reemployment_center_timer]§!"
  holding_recruitment_office:0 "สำนักงานสรรหาคน"
@@ -534,7 +534,7 @@
  holding_experimental_crater_effect:0 "§YCaution:§!\n     Incoming colony "ships" may §REXPLODE§!!"
  MESSAGE_OVERLORD_CRATER_TITLE:0 "Experimental Colony Asteroid"
  MESSAGE_OVERLORD_CRATER_DESC:0 "A Colony Asteroid from our Overlord has crashed into $PLANET|Y$. It will take months to repair the planet."
- holding_organic_sanctuary:0 "Organic Haven"
+ holding_organic_sanctuary:0 "สวรรค์ของสิ่งมีชีวิต"
  holding_organic_sanctuary_desc:0 "Although the care facilities on this planet are more limited in scope than those found on the Overlord's worlds, the bio-trophies inside still enjoy a much more comfortable standard of living than they are used to."
  holding_sacrificial_shrine:0 "Sacrificial Shrine"
  holding_sacrificial_shrine_desc:0 "The great study of the cycle should not be limited to the Overlord; the turning of life and death must be explored through the Vassal as well."
@@ -569,8 +569,8 @@
  mod_planet_refiners_exotic_gases_produces_mult:0 "£job_gas_refiner£ ผลผลิต [Root.Refiners]"
  mod_planet_translucers_rare_crystals_produces_mult:0 "£job_translucer£ ผลผลิต [Root.Translucers]"
  mod_planet_chemists_volatile_motes_produces_mult:0 "£job_chemist£ ผลผลิต [Root.Chemists]"
- divided_patronage:0 "Divided Patronage"
- divided_patronage_desc:0 "Our Overlord's attention is divided among too many subjects."
+ divided_patronage:0 "การอุปถัมภ์ถูกแบ่ง"
+ divided_patronage_desc:0 "ความสนใจของโอเวอร์ลอร์ดของเราถูกแบ่งไปให้บริวารจำนวนมากเกินไป"
  feudal_lord:0 "Feudal Lord"
  feudal_lord_desc:1 "The feudal Overlord affords the subject agency over their realm, in exchange for their loyalty."
  corporate_franchise:0 "Corporate Franchise"
