--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -143,9 +143,9 @@
  leader_trait_skirmisher_2_hive_desc:0 "$leader_trait_skirmisher_hive_desc$"
  leader_trait_skirmisher_2_machine:0 "$leader_trait_skirmisher_machine$ II"
  leader_trait_skirmisher_2_machine_desc:0 "$leader_trait_skirmisher_machine_desc$"
- leader_trait_aggressive_hive:0 "Aggressive Attack Pattern"
+ leader_trait_aggressive_hive:0 "รูปแบบการโจมตีเชิงรุก"
  leader_trait_aggressive_hive_desc:1 "This drone utilizes aggressive attack patterns in fleet combat."
- leader_trait_aggressive_machine:0 "Aggressive Attack Pattern"
+ leader_trait_aggressive_machine:0 "รูปแบบการโจมตีเชิงรุก"
  leader_trait_aggressive_machine_desc:1 "This unit utilizes aggressive attack patterns in fleet combat."
  leader_trait_aggressive_2_hive:0 "$leader_trait_aggressive_hive$ II"
  leader_trait_aggressive_2_hive_desc:0 "$leader_trait_aggressive_hive_desc$"
@@ -315,9 +315,9 @@
  leader_trait_army_logistician_2_hive_desc:0 "$leader_trait_army_logistician_hive_desc$"
  leader_trait_army_logistician_2_machine:0 "$leader_trait_army_logistician_machine$ II"
  leader_trait_army_logistician_2_machine_desc:0 "$leader_trait_army_logistician_machine_desc$"
- leader_trait_restrained_hive:1 "Calculator"
+ leader_trait_restrained_hive:1 "เครื่องคำนวณ"
  leader_trait_restrained_hive_desc:1 "This drone calculates tactical offensives that minimize collateral damage."
- leader_trait_restrained_machine:1 "Calculator"
+ leader_trait_restrained_machine:1 "เครื่องคำนวณ"
  leader_trait_restrained_machine_desc:1 "This unit calculates tactical offensives that minimize collateral damage."
  leader_trait_restrained_2_hive:0 "$leader_trait_restrained_hive$ II"
  leader_trait_restrained_2_hive_desc:0 "$leader_trait_restrained_hive_desc$"
@@ -569,7 +569,7 @@
  trait_ruler_world_shaper_machine_desc:1 "This unit is specialized for improving colonized worlds."
  leader_trait_bureaucrat_hive:0 "Mindfulness"
  leader_trait_bureaucrat_hive_desc:1 "This drone raises performance standards and increases the efficiency of all administrative drones."
- leader_trait_bureaucrat_machine:0 "Amplifier"
+ leader_trait_bureaucrat_machine:0 "เครื่องขยายงาน"
  leader_trait_bureaucrat_machine_desc:1 "This unit raises the average output and increases the efficiency of all administrative units."
  trait_ruler_industrialist_hive:1 "นักสะสม"
  trait_ruler_industrialist_hive_desc:1 "This drone's primary focus is mineral production."
@@ -644,17 +644,17 @@
  leader_trait_enlister_2_hive_desc:0 "$leader_trait_enlister_hive_desc$"
  leader_trait_enlister_2_machine:0 "$leader_trait_enlister_machine$ II"
  leader_trait_enlister_2_machine_desc:0 "$leader_trait_enlister_machine_desc$"
- leader_trait_shipwright_hive:0 "Ship Construction Focus"
+ leader_trait_shipwright_hive:0 "โฟกัสการสร้างยาน"
  leader_trait_shipwright_hive_desc:1 "This drone focuses on the efficient and economically viable construction of fleets in the system."
- leader_trait_shipwright_machine:0 "Ship Construction Focus"
+ leader_trait_shipwright_machine:0 "โฟกัสการสร้างยาน"
  leader_trait_shipwright_machine_desc:1 "This unit is programmed to focus on the efficient and economically viable construction of fleets in the system."
  leader_trait_shipwright_2_hive:0 "$leader_trait_shipwright_hive$ II"
  leader_trait_shipwright_2_hive_desc:0 "$leader_trait_shipwright_hive_desc$"
  leader_trait_shipwright_2_machine:0 "$leader_trait_shipwright_machine$ II"
  leader_trait_shipwright_2_machine_desc:0 "$leader_trait_shipwright_machine_desc$"
- leader_trait_architectural_interest_hive:0 "Efficient Builder"
+ leader_trait_architectural_interest_hive:0 "ผู้สร้างที่มีประสิทธิภาพ"
  leader_trait_architectural_interest_hive_desc:1 "This drone is proficient at construction and engineering."
- leader_trait_architectural_interest_machine:0 "Efficient Builder"
+ leader_trait_architectural_interest_machine:0 "เครื่องสร้างที่มีประสิทธิภาพ"
  leader_trait_architectural_interest_machine_desc:1 "This unit is designed for construction and engineering."
  leader_trait_architectural_interest_2_hive:0 "$leader_trait_architectural_interest_hive$ II"
  leader_trait_architectural_interest_2_hive_desc:0 "$leader_trait_architectural_interest_hive_desc$"
@@ -752,7 +752,7 @@
  leader_trait_resilient_2_hive_desc:1 "$leader_trait_resilient_hive_desc$"
  leader_trait_resilient_2_machine:1 "$leader_trait_resilient_machine$ II"
  leader_trait_resilient_2_machine_desc:1 "$leader_trait_resilient_machine_desc$"
- leader_trait_adaptable_machine:0 "Flexible Programming"
+ leader_trait_adaptable_machine:0 "เขียนโปรแกรมคำสั่งยืดหยุ่น"
  leader_trait_adaptable_machine_desc:1 "This unit is quick to experiment with new methods and ideas."
  leader_trait_adaptable_hive_desc:1 "This drone is quick to experiment with new methods and ideas."
  leader_trait_adaptable_2_hive:0 "$leader_trait_adaptable$ II"
@@ -957,9 +957,9 @@
  leader_trait_society_focus_2_hive_desc:0 "$leader_trait_society_focus_hive_desc$"
  leader_trait_society_focus_2_machine:0 "$leader_trait_society_focus_machine$ II"
  leader_trait_society_focus_2_machine_desc:0 "$leader_trait_society_focus_machine_desc$"
- leader_trait_archaeologist_hive:0 "Archaeologist Drone"
+ leader_trait_archaeologist_hive:0 "โดรนโบราณคดี"
  leader_trait_archaeologist_hive_desc:0 "This drone focuses on archaeological missions."
- leader_trait_archaeologist_machine:0 "Archaeologist Unit"
+ leader_trait_archaeologist_machine:0 "ยูนิตโบราณคดี"
  leader_trait_archaeologist_machine_desc:0 "This unit focuses on archaeological missions."
  leader_trait_archaeologist_2_hive:0 "$leader_trait_archaeologist_hive$ II"
  leader_trait_archaeologist_2_hive_desc:0 "$leader_trait_archaeologist_hive_desc$"
@@ -997,9 +997,9 @@
  subclass_commander_strategist_hive_desc:0 "Strategists are focused on the bigger picture. Instead of leading the battle up front, they prefer to maintain cohesion in the military and draw galaxy-spanning war plans."
  subclass_commander_strategist_machine:0 "Strategist"
  subclass_commander_strategist_machine_desc:0 "$subclass_commander_strategist_hive_desc$"
- leader_trait_cautious_hive:1 "Prudence"
+ leader_trait_cautious_hive:1 "รอบคอบ"
  leader_trait_cautious_hive_desc:0 "This drone exhibits extremely cautious behavior."
- leader_trait_cautious_machine:1 "Prudence"
+ leader_trait_cautious_machine:1 "รอบคอบ"
  leader_trait_cautious_machine_desc:0 "This unit has been programmed to prioritize caution."
  leader_trait_cautious_2_hive:0 "$leader_trait_cautious_hive$ II"
  leader_trait_cautious_2_hive_desc:0 "$leader_trait_cautious_hive_desc$"
