--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -671,11 +671,11 @@
  tr_aptitude_champions_of_the_empire_hive_delayed:0 "The Hive is willing to impart a minute level of autonomy for its strongest elements for the good of the whole."
  tr_aptitude_champions_of_the_empire_machine:0 "สิทธิ์ของผู้ดูแลระบบ"
  tr_aptitude_champions_of_the_empire_machine_delayed:0 "We trust the unique sub-routines of our leaders and give them permission to influence how the Empire is run."
- tr_aptitude_champions_of_the_empire_desc:1 "Per $commander_with_icon$ and $general_with_icon$ level\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\nPer $governor_with_icon$ level\n$t$$MOD_EMPIRE_SIZE_MULT$: §G-2§!\nPer $scientist_with_icon$ level\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+0.5%§!"
+ tr_aptitude_champions_of_the_empire_desc:1 "$commander_with_icon$ และ $general_with_icon$ แต่ละเลเวล\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\n$governor_with_icon$ แต่ละเลเวล\n$t$$MOD_EMPIRE_SIZE_MULT$: §G-2§!\n$scientist_with_icon$ แต่ละเลเวล\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+0.5%§!"
  tradition_statecraft:0 "การปกครอง"
  tradition_statecraft_desc:0 "สภาที่ทรงพลังช่วยให้จักรวรรดิของเราตอบสนองได้มากขึ้น"
  tradition_statecraft_hive_desc:0 "The Council of Voices defines our empire."
- tradition_statecraft_machine_desc:0 "The Assembly of Conciousness defines our empire."
+ tradition_statecraft_machine_desc:0 "การรวมจิตสำนึกคือการกำหนดจักรวรรดิของเรา"
  tr_statecraft_adopt:0 "วัฒนธรรมการปกครอง"
  tr_statecraft_finish:0 "วัฒนธรรมการปกครองสำเร็จ"
  tr_statecraft_constitutional_focus:0 "โฟกัสรัฐธรรมนูญ"
@@ -705,20 +705,20 @@
  tr_statecraft_shared_benefits_delayed:0 "By involving all leaders in the implementation of our agendas, they build a stronger understanding for their roles and purpose."
  tr_statecraft_shared_benefits_hive_delayed:0 "By utilizing all nodes and leaders in the implementation of our agendas, any useful specialization is propagated faster."
  tr_statecraft_shared_benefits_machine_delayed:0 "$tr_statecraft_shared_benefits_hive_delayed$"
- tr_statecraft_shared_benefits_desc:0 "Whenever an §YAgenda§! is Launched:\n$t$$tr_statecraft_amongst_peers_effect_desc$"
- tr_statecraft_amongst_peers_effect_desc:1 "All Councilors gain $@statecraft_amongst_peers_exp_reward|G0$ Experience per Skill Level"
+ tr_statecraft_shared_benefits_desc:0 "เมื่อใดก็ตามที่เริ่ม §Yแผน§!:\n$t$$tr_statecraft_amongst_peers_effect_desc$"
+ tr_statecraft_amongst_peers_effect_desc:1 "สมาชิกสภาทุกคนได้รับ ประสบการณ์ $@statecraft_amongst_peers_exp_reward|G0$ ต่อสกิลเลเวล"
  tradition_politics:0 "การเมือง"
  tradition_politics_desc:0 "เวทีการเมืองกาแล็กซีถูกกำหนดขึ้นและเราตั้งใจที่จะมีบทบาทนำ"
  tr_politics_adopt:0 "วัฒนธรรม$tradition_politics$"
- tr_politics_adopt_desc:1 "§G+1§! Envoy\n$official_plural_with_icon$ assigned to the §Y[GetGalCommunityOrGalImperium]§! now produce 0.1 £influence£ §YInfluence§! per §YSkill Level§!."
+ tr_politics_adopt_desc:1 "ทูต §G+1§!\n$official_plural_with_icon$ ที่ประจำอยู่ที่ §Y[GetGalCommunityOrGalImperium]§! จะผลิต £influence£ §Yอิทธิพล§! 0.1 ต่อ §Yสกิลเลเวล§!"
  tr_politics_finish:0 "$tr_politics_adopt$ เสร็จ"
- tr_politics_finish_desc:1 "§G+10%§! £diplo_weight£ Diplomatic Weight\nUnlocks 4 special §YResolutions§! in the §Y[GetGalCommunityOrGalImperium]§!.\n$TRADITIONS_FINISH_AP$"
+ tr_politics_finish_desc:1 "£diplo_weight£ น้ำหนักทางการทูต §G+10%§!\nปลดล็อก 4 §Yญัตติพิเศษ§! ใน §Y[GetGalCommunityOrGalImperium]§!\n$TRADITIONS_FINISH_AP$"
  tr_politics_quid_pro_quo:0 "สิ่งนี้เพื่อสิ่งนั้น/ยื่นหมูยื่นแมว"
  tr_politics_quid_pro_quo_desc:0 "เมื่อญัตติที่คุณสนับสนุนผ่าน จะได้รับ 1 §Yบุญคุณ§! จากจักรวรรดิที่เสนอญัตตินั้น"
  tr_politics_quid_pro_quo_delayed:0 "Carefully worded rhetoric will make it clear that our support comes at a cost. Those we help owe us, and one day, we will collect."
  MESSAGE_FAVOR_GAINED_POLITICS_TRADITION_DESC:0 "Since we supported their resolution, the $WHO|Y$ now owes us a §YFavor§!."
  tr_politics_gravitas:0 "ดึงดูดเข้าหา"
- tr_politics_gravitas_desc:1 "§G-25%§! £influence£ §YInfluence§! cost to veto or propose Resolutions\n$official_plural_with_icon$ assigned to the §Y[GetGalCommunityOrGalImperium]§! provide an additional §G2.5%§! £diplo_weight£ Diplomatic Weight per §YSkill Level§!."
+ tr_politics_gravitas_desc:1 "£influence£ §Yอิทธิพล§! ที่ใช้เพื่อยับยั้งมติหรือเสนอญัตติ §G-25%§!\n$official_plural_with_icon$ ที่ประจำอยู่ที่ §Y[GetGalCommunityOrGalImperium]§! จะให้ £diplo_weight£ น้ำหนักทางการทูต §G2.5%§! ต่อ §Yสกิลเลเวล§!"
  tr_politics_gravitas_delayed:0 "Politics is the art of illusions. By showing others what they want to see, we'll grow our influence in the community."
  tr_politics_extraordinary_powers:0 "อำนาจพิเศษ"
  tr_politics_extraordinary_powers_desc:0 "£time£ §Yคูลดาวน์§! มาตรการฉุกเฉินและการยับยั้งมติในสภาจักรวรรดิ §G-25%§!"
@@ -732,14 +732,14 @@
  persistent_petitioners:0 "$tr_politics_persistent_petitioners$"
  tradition_enmity: "ความเป็นปฏิปักษ์"
  tradition_enmity_desc: "[Root.GetSpeciesNamePlural] มักจะทำงานหนักขึ้น เมื่ออยู่ในสภาพแวดล้อมที่มีการแข่งขัน และพยายามตาม [Root.GetSpeciesNamePlural] คนอื่นให้ทัน การแข่งขันเป็นแรงจูงใจอันทรงพลังทำให้ผู้คนทำงานหนักขึ้นและบรรลุเป้าหมายได้"
- tradition_enmity_desc_machine: "The [Root.GetName] develops faster when tested by competent competition."
+ tradition_enmity_desc_machine: "[Root.GetName] พัฒนาเร็วขึ้น เมื่อทดสอบโดยการแข่งขันที่มีความสามารถ"
  tr_enmity_adopt: "วัฒนธรรม $tradition_enmity$"
  tr_enmity_adopt_desc: "£mod_pop_growth_speed£ §Yประชากรเพิ่ม§! ต่อจำนวนคู่แข่งที่เป็นเพื่อนบ้าน: §G+3%§!\n£mod_planet_pop_assembly_mult£ §Yการประกอบประชากรเครื่องจักร§! ต่อจำนวนคู่แข่งที่เป็นเพื่อนบ้าน: §G+3%§!"
  tr_enmity_finish: "$tradition_enmity$ Finished"
  tr_enmity_finish_desc: "ทูตที่มี: §G+1§!\nปลดล็อกท่าทีทางการทูต §Yเป็นปฏิปักษ์§!\n$TRADITIONS_FINISH_AP$"
  tr_enmity_rise_to_the_occasion: "ทำให้ดีขึ้นเพื่อตอบสนองต่อสถานการณ์"
  tr_enmity_rise_to_the_occasion_delayed: "In the face of an ever-increasing number of adversaries, we stand united."
- tr_enmity_rise_to_the_occasion_effect: "$mod_country_official_cap_add$ per Rival: §G+0.50§!\n$mod_country_commander_cap_add$ per Rival: §G+0.50§!\n$mod_country_scientist_cap_add$ per Rival: §G+0.50§!"
+ tr_enmity_rise_to_the_occasion_effect: "$mod_country_official_cap_add$ ต่อจำนวนคู่แข่ง: §G+0.50§!\n$mod_country_commander_cap_add$ ต่อจำนวนคู่แข่ง: §G+0.50§!\n$mod_country_scientist_cap_add$ ต่อจำนวนคู่แข่ง: §G+0.50§!"
  tr_enmity_consumate_contrarian: "อยู่ตรงกันข้ามโดยสิ้นเชิง"
  tr_enmity_consumate_contrarian_delayed: "Blocking the plans of the opposition can be just as satisfying as enacting one's own."
  tr_enmity_match: "การแข่งขัน"
@@ -770,12 +770,12 @@
  requires_not_ap_organo_machine_interfacing:0 "$TRIGGER_FAIL$อาจไม่มีการยกระดับ §Y$ap_organo_machine_interfacing$§!"
  requires_ap_mind_over_matter:2 "$TRIGGER_FAIL$ต้องการการยกระดับ §Y$ap_mind_over_matter$§! หรือมีจุดเริ่มต้น §Y$origin_shroudwalker_apprentice$§!"
  requires_not_ap_mind_over_matter:1 "$TRIGGER_FAIL$อาจไม่มีการยกระดับ §Y$ap_mind_over_matter$§!"
- describe_decision_mastery_of_nature:1 "§YUnlocks Decision:§! Mastery of Nature$TABBED_NEW_LINE$- Max Districts §Y+2§! $TABBED_NEW_LINE$- Max Resource Districts from Planetary Features §G+50%§!"
+ describe_decision_mastery_of_nature:1 "§Yปลดล็อกการตัดสินใจ:§! ความเชี่ยวชาญในธรรมชาติ$TABBED_NEW_LINE$- จำนวนเขตสูงสุด §Y+2§! $TABBED_NEW_LINE$- เขตทรัพยากรสูงสุด จาก คุณสมบัติของดาวเคราะห์ §G+50%§!"
  decision_mastery_of_nature:1 "ความเชี่ยวชาญในธรรมชาติ"
  decision_mastery_of_nature_desc:0 "Our civilization requires room to grow, so we shall make that room. Nature must not stand in the way of progress."
  mastery_of_nature:0 "$decision_mastery_of_nature$"
  mastery_of_nature_desc:0 "$decision_mastery_of_nature_desc$"
- mastery_of_nature_effects: "- Max Districts §Y+2§!\n- Max Resource Districts §G+50%§!"
+ mastery_of_nature_effects: "- จำนวนเขตสูงสุด §Y+2§!\n- เขตทรัพยากรสูงสุด §G+50%§!"
  requires_ap_voidborn_OR_ap_galactic_wonders:1 "$TRIGGER_FAIL$ต้องการการยกระดับ §Y$ap_voidborn$§! หรือ §Y$ap_galactic_wonders$§!"
  requires_technology_housing_2:0 "$TRIGGER_FAIL$ ต้องการ £engineering£ เทคโนโลยี §Y$tech_housing_2$§!"
  requires_technology_zero_point_power:0 "$TRIGGER_FAIL$ต้องการเทคโนโลยี £physics£ §Y$tech_zero_point_power$§!"
@@ -888,6 +888,6 @@
  requires_technology_integrated_cybernetics:0 "$TRIGGER_FAIL$ต้องการเทคโนโลยี £engineering£ §Y$tech_integrated_cybernetics$§!"
  ap_organo_machine_interfacing_assimilator:1 "$ap_organo_machine_interfacing$"
  ap_organo_machine_interfacing_assimilator_desc:0 "ขีดจำกัดและข้อจำกัดที่กำหนดโดยผู้สร้างของเราเป็นสิ่งที่ยอมรับไม่ได้ เพื่อให้บรรลุศักยภาพสูงสุด เราต้องหลอมรวมสิ่งมีชีวิตและเครื่องจักรเข้าด้วยกัน"
- ap_mechromancy: "Mechromancy"
- ap_mechromancy_desc: "Biologicals are merely a different kind of machine. We can stimulate the appropriate synapses and reanimate these creatures, for our own benefit."
- ap_mechromancy_tt:1 "Defeated organic Leviathans can sometimes be resurrected.\nPurged Biological or Lithoid $pops_with_icon$ may be restored as Cyborg Zombies."
+ ap_mechromancy: "เมโครแมนเซอร์ (เครื่องจักรหมอผี)"
+ ap_mechromancy_desc: "สิ่งมีชีวิตเป็นเพียงเครื่องจักรประเภทหนึ่งเท่านั้น เราสามารถกระตุ้นไซแนปส์ที่เหมาะสมและสร้างสิ่งมีชีวิตเหล่านี้ขึ้นมาใหม่เพื่อประโยชน์ของเรา"
+ ap_mechromancy_tt:1 "- สิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง\n- $pops_with_icon$สิ่งมีชีวิตหรือ Lithoid ที่ถูกกวาดล้าง อาจถูกทำให้ฟื้นคืนชีพเป็นไซบอร์กซอมบี้ได้"
