--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -414,7 +414,7 @@
  HAS_NOT_DEPOSIT_CATEGORY:0 "Has NOT deposit category $CAT|H$"
  IS_STARTING_SYSTEM:0 "เป็นระบบดาวเริ่มต้น"
  IS_NOT_STARTING_SYSTEM:0 "ไม่เป็นระบบดาวเริ่มต้น"
- HAS_ADVISOR:0 "$COUNTRY|Y$ Has an Advisor."
+ HAS_ADVISOR:0 "$COUNTRY|Y$ มีที่ปรึกษา"
  HAS_NOT_ADVISOR:0 "$COUNTRY|Y$ ไม่มีที่ปรึกษา"
  HAS_GLOBAL_FLAG:0 "Global Flag: $FLAG|Y$ Is Set"
  HAS_NOT_GLOBAL_FLAG:0 "Global Flag: $FLAG|Y$ Is Not Set"
@@ -1210,8 +1210,8 @@
  REMOVE_ASSOCIATE_MEMBER_EFFECT:0 "$WHO|Y$ is removed as an associate member of the $ALLIANCE|Y$"
  SPAWN_SYSTEM_EFFECT:0 "A new system is created!"
  DISMANTLE_EFFECT:0 "The station is dismantled.\n"
- ACTIVATE_ADVISOR:0 "The advisor for $COUNTRY|Y$ is added"
- DEACTIVATE_ADVISOR:0 "The advisor for $COUNTRY|Y$ is removed"
+ ACTIVATE_ADVISOR:0 "ที่ปรึกษา $COUNTRY|Y$ ถูกเพิ่ม"
+ DEACTIVATE_ADVISOR:0 "ที่ปรึกษา $COUNTRY|Y$ ถูกลบ"
  BEGIN_EVENT_CHAIN_EFFECT:1 "เริ่มเหตุการณ์ $NAME$\n\n"
  END_EVENT_CHAIN_EFFECT:1 "จบเหตุการณ์ต่อเนื่อง: $NAME$\n\n"
  SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ มีแนวโน้มหลักจริยธรรมไปทาง $ETHIC|Y$\n"
