--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -250,9 +250,9 @@
  requires_technology_gateway_construction:0 "$TRIGGER_FAIL$ต้องใช้เทคโนโลยี £physics£ §Y$tech_gateway_construction$§!"
  NAVY_SIZE_STARBASES_TITLE:0 "From Starbases"
  TECH_UNLOCK_STARBASE_MODULE:0 "§Hปลดล็อกโมดูลสถานีอวกาศ:§! $NAME$"
- TECH_UNLOCK_ORBITAL_MODULE: "§HUnlocks Orbital Ring Module:§! $NAME$"
+ TECH_UNLOCK_ORBITAL_MODULE: "§Hปลดล็อกโมดูลบนสถานีอวกาศวงแหวนโคจร:§! $NAME$"
  TECH_UNLOCK_STARBASE_BUILDING:0 "§Hปลดล็อกสิ่งปลูกสร้างบนสถานีอวกาศ:§! $NAME$"
- TECH_UNLOCK_ORBITAL_BUILDING: "§HUnlocks Orbital Ring Building:§! $NAME$"
+ TECH_UNLOCK_ORBITAL_BUILDING: "§Hปลดล็อกสิ่งปลูกสร้างบนสถานีอวกาศวงแหวนโคจร:§! $NAME$"
  tech_ftl_inhibitor:0 "การยับยั้งการเคลื่อนที่ที่เร็วกว่าแสง"
  tech_ftl_inhibitor_desc:1 "Gravity well projectors can be used to create localized pockets of space where safe entry into hyperspace is impossible. The immense power requirements and the size of the projectors prohibits their use on anything smaller than a starbase."
  ION_CANNON_CORE:0 "แกนกลางปืนใหญ่ไอออน"
