--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -150,7 +150,7 @@
  civic_reanimated_armies:1 "ผู้ฟื้นคืนชีพศพ"
  civic_reanimated_armies_desc:1 "Within this society, death is no bar to the call to arms. Masters of the art of necromancy reanimate corpses to raise dread hosts and guardians, striking fear into the hearts of lesser mortals."
  disabled_by_synthetic_ascension:0 "Incompatible with §YSynthetic Ascension§!"
- civic_tooltip_reanimated_armies_effects:3 "Can build £building£ §YDread Encampments§!, granting £job_necromancer£ §YNecromancer§! jobs and allowing the recruitment of §YUndead Armies§!.\n$job_necromancer_effect_desc$.\nGrants access to the £building£ §Y$holding_dread_outpost$§! Holding\nDefeated organic armies are sometimes resurrected as §YUndead Armies§!.\nDefeated organic Leviathans can sometimes be resurrected."
+ civic_tooltip_reanimated_armies_effects:3 "สามารถสร้าง £building£ §Yค่ายที่พักที่น่ากลัว§! ที่จะอนุญาตให้มีงาน £job_necromancer£ §Yเนโครแมนเซอร์§! และอนุญาตให้มีการคัดเลือก §Yกองทัพผีดิบ§!\n$job_necromancer_effect_desc$\nให้สิทธิ์การเข้าถึงสิ่งปลูกสร้าง £building£ §Y$holding_dread_outpost$§!\nกองทัพสิ่งมีชีวิตที่ถูกกำจัดจะถูกทำให้ฟื้นคืนชีพเป็น §Yกองทัพผีดิบ§!\nสิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง"
  building_dread_encampment:0 "ค่ายที่พักที่น่ากลัว"
  building_dread_encampment_desc:1 "It is best to shield the activities of the necromancers from the tender eyes of the public as they raise undead hordes to fight in our armies."
  job_necromancer_effect_desc:4 "£job_necromancer£ $job_necromancer_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £physics£ £society£ §YResearch Points§! and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, and spawn £defense_army£ §YUndead Defense Armies§!"
@@ -219,10 +219,10 @@
  job_death_chronicler_desc:0 "Entropy is the domain of these scholars, who observe and record death and its effects in all their various expressions."
  job_death_chronicler_effect_desc:2 "£job_death_chronicler£ $job_death_chronicler_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น £unity£ §Y$unity$§!, [GetCultureWorkerSpiMatOutput][GetCultureWorkerEgalAuthOutput][GetCultureWorkerMilPacOutput][GetCultureWorkerXenoOutput] และ £stability£ §Yเสถียรภาพ§!\n\nผลที่ได้จากงาน £job_death_chronicler£ นักประวัติศาสตร์ความตาย จะแตกต่างกันออกไป ขึ้นอยู่กับจริยธรรมการปกครองของจักรวรรดิ"
  job_death_chronicler_simple_effect_desc:0 "- £job_death_chronicler£ $job_death_chronicler_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น £unity£ §Y$unity$§!, £stability£ §Yเสถียรภาพ§! และ §Yจริยธรรมการปกครองของจักรวรรดิ§! มีผลต่ออาชีพ §Y£job_culture_worker£ $job_culture_worker_plural$§! รวมไปถึงผลที่ได้จากงานนี้ด้วย"
- job_chronicle_drone:0 "Chronicle Drone"
- job_chronicle_drone_plural:0 "Chronicle Drones"
+ job_chronicle_drone:0 "โดรนบันทึกเหตุการณ์"
+ job_chronicle_drone_plural:0 "โดรนบันทึกเหตุการณ์"
  job_chronicle_drone_desc:0 "These specialized drones turn their thoughts to entropy, researching terminal decay as a counterpoint to our own, continued existence."
- job_chronicle_drone_effect_desc:3 "£job_chronicle_drone£ $job_chronicle_drone_plural$ เปลี่ยน £energy£ §Y$energy$§! และ £minerals£ §Y$minerals$§! เป็น £unity£ §Y$unity$§!, £stability£ §YStability§! และ $r_amenities$"
+ job_chronicle_drone_effect_desc:3 "£job_chronicle_drone£ $job_chronicle_drone_plural$ เปลี่ยน £energy£ §Y$energy$§! และ £minerals£ §Y$minerals$§! เป็น £unity£ §Y$unity$§!, £stability£ §Yเสถียรภาพ§! และ $r_amenities$"
  mod_job_death_chronicler_add:0 "งาน$job_death_chronicler$"
  mod_job_death_chronicler_per_pop:0 "§G+1§! อาชีพ $job_death_chronicler$ ต่อ $VALUE$ ประชากร"
  mod_job_death_chronicler_per_pop_short:0 "\n§G+1§! £mod_job_death_chronicler_add£ ต่อ $VALUE$ £pop£"
@@ -232,17 +232,17 @@
  action.62.memorialist.a:0 "They shall be remembered."
  civic_permanent_employment:0 "การจ้างงานแบบถาวร"
  civic_permanent_employment_desc:0 "This Megacorporation has ensured that its employees will never be out of a job. Ever. After the employee's time is up, they will be repurposed for simpler tasks so that they can still provide for their families and pay off their debts."
- civic_tooltip_permanent_employment_effects:3 "Can build £building£ §Y$building_posthumous_employment_center$§!\n$job_reassigner_effect_desc$\n\nGrants access to the £building£ §Y$holding_reemployment_center$§! Holding.\n\nDefeated organic Leviathans can sometimes be resurrected."
- job_reassigner:0 "Reassigner"
+ civic_tooltip_permanent_employment_effects:3 "สามารถสร้าง £building£ §Y$building_posthumous_employment_center$§!\n$job_reassigner_effect_desc$\n\nให้สิทธิ์การเข้าถึงสิ่งปลูกสร้าง £building£ §Y$holding_reemployment_center$§!\n\nสิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง"
+ job_reassigner:0 "ผู้รับโอนสิทธิ์ใหม่"
  job_reassigner_desc:0 "Reassigners ensure that once a Megacorporation's citizen has passed on, their remains will stay at work until the fulfillment of their contract."
- job_reassigner_plural:0 "Reassigners"
- job_reassigner_effect_desc:0 "£job_necromancer£ $job_reassigner_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! และ ทั้ง £food£ §Y$food$§! หรือ £minerals£ §Y$minerals$§! เป็น £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!  £pop£  ประชากรที่รวมตัวกันทั้งหมดจะมีคุณลักษณะ §Yซอมบี้§!"
+ job_reassigner_plural:0 "ผู้รับโอนสิทธิ์ใหม่"
+ job_reassigner_effect_desc:0 "- £job_necromancer£ $job_reassigner_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! และ ทั้ง £food£ §Y$food$§! หรือ £minerals£ §Y$minerals$§! เป็น £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!\n- £pop£  ประชากรที่ประกอบขึ้นมาทั้งหมดจะมีคุณลักษณะ §Yซอมบี้§!"
  planet_reassigners:0 "Reassigner Jobs"
  mod_job_reassigner_add:0 "งาน $job_reassigner$"
  trait_zombie:0 "ซอมบี้"
  trait_zombie_desc:0 "§LThe remains of a once-proud sapient being, this husk is not suitable for much more than the simplest tasks.§!"
  TRAIT_ZOMBIE_EFFECT:0 "$mod_planet_jobs_produces_mult$: §R-25%§!\nPop Upkeep reduced by: §G100%§!\nCannot generate §YLeaders§!\nCannot be employed in §Y$pop_cat_ruler$§! or §Y$pop_cat_specialist$§! Jobs"
- building_posthumous_employment_center:0 "Posthumous Employment Center"
+ building_posthumous_employment_center:0 "ศูนย์จัดหางาน Posthumous"
  building_posthumous_employment_center_desc:0 "At the Posthumous Employment Center, carcasses bereft of consciousness can find new purpose and a new opportunity to pay off their debts."
  edict_sacrifice_bounty_zombie:0 "$edict_sacrifice_bounty$"
  edict_sacrifice_bounty_zombie_desc:0 "The most devout among us are prepared to meet their fate, keen that our society should be enriched by their final sacrifice. Our deaths shall bring prosperous enterprise value, and our bodies will continue serving the corporation."
@@ -253,9 +253,9 @@
  necroids.260.b:0 "Just add some more 0s to their debt."
  zombie_contract_manipulation:0 "Zombie Contract Manipulation"
  zombie_contract_manipulation_desc:0 "This empire fiddled with their zombie workers' contracts so that it's actually impossible to get out of debt."
- civic_hive_cordyceptic_drones:0 "Cordyceptic Drones"
+ civic_hive_cordyceptic_drones:0 "โดรน Cordyceptic"
  civic_hive_cordyceptic_drones_desc:0 "Highly specialized drones capable of infecting simple hosts and issuing rudimentary commands make up the backbone of this hive's stellar defense."
- civic_tooltip_cordyceptic_drones:0 "- Start the game with §G3§! §HReanimated Amoebas§!.\n- Defeated organic Space Fauna are automatically reanimated.\n- Defeated organic Leviathans can sometimes be resurrected.\n"
+ civic_tooltip_cordyceptic_drones:0 "- เริ่มเกมด้วย §G3§! §Hอะมีบาที่ถูกคืนชีพ§!\n- สิ่งมีชีวิตสัตว์อวกาศที่ถูกกำจัดจะถูกช่วยให้ฟื้นคืนชีพโดยอัตโนมัติ\n- สิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง\n"
  MESSAGE_REANIMATION_COMPLETE_TITLE:0 "Reanimation Complete"
  MESSAGE_REANIMATION_COMPLETE_TIYANKI_DESC:0 "A new batch of reanimated Tiyanki is ready for us in $SYSTEM|Y$. The next lot is already underway."
  MESSAGE_REANIMATION_AMOEBA_TIYANKI_DESC:0 "A new batch of reanimated Amoeba is ready for us in $SYSTEM|Y$. The next lot is already underway."
