--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -7,12 +7,12 @@
  autoselect_traits:0 "เลือกคุณลักษณะอัตโนมัติ"
  RECRUIT_LEADER_VIEW_HIRE:0 "Hire ($COST$)"
  LEADER_STATUS_DESC:0 "[Root.LeaderAssignDesc]"
- leader_desc_commander: "§E§HCommanders§! can be assigned to command a §HFleet§! or an §HArmy§!, or govern a §HPlanet§!, and occupy a valid §HCouncil Position§! at the same time§!."
+ leader_desc_commander: "§Eสามารถแต่งตั้ง §Hผู้บัญชาการ§! ให้คุม §Hกองยานรบ§!, §Hกองทัพบก§! หรือปกครอง §Hดาวเคราะห์§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
  leader_desc_admiral:0 "§Eสามารถแต่งตั้ง §Hพลเรือเอก§! ให้คุม §Hกองยานรบ§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
- leader_desc_scientist: "§E§HScientists§! can be assigned to pilot a §HScience Ship§!, or govern a §HPlanet§!, and occupy a valid §HCouncil Position§! at the same time§!."
+ leader_desc_scientist: "§Eสามารถแต่งตั้ง §Hนักวิทยาศาสตร์§! ให้คุม §Hยานวิจัยวิทยาศาสตร์§! หรือปกครอง §Hดาวเคราะห์§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
  leader_desc_general:0 "§Eสามารถแต่งตั้ง §Hพลเอก§! ให้คุม §Hกองทัพบก(จู่โจม)§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
  leader_desc_governor:0 "§Eสามารถแต่งตั้ง §Hผู้ว่าการ§! ให้ปกครอง §Hดาวเคราะห์§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
- leader_desc_official: "§E§H$official_plural$§! can be assigned to represent our interests in a §HFederation§! or the §H[global_event_country.GetCommunityOrImperium]§!, or govern a §HPlanet§!, and occupy a valid §HCouncil Position§! at the same time§!."
+ leader_desc_official: "§Eสามารถแต่งตั้ง §H$official_plural$§! ให้เป็นตัวแทนและดูแลผลประโยชน์ของเราใน §Hสหพันธ์§! หรือ §H[global_event_country.GetCommunityOrImperium]§! หรือปกครอง §Hดาวเคราะห์§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
  EXTERNAL_POOL_AVAILABILITY_TITLE:0 "$NAME|Y$ เป็นผู้นำจากภายนอกเนื่องจาก:"
  FROM_DEFENDING_GENERAL:0 "Defending Commander $NAME|H$:\n"
  FROM_ATTACKING_GENERAL:0 "Attacking Commander $NAME|H$:\n"
@@ -1437,25 +1437,25 @@
  building_paragon_memory_vaults_desc:1 "Our society has always preserved the stories of heroes and prominent figures from the past. Their knowledge and experiences are digitized and gathered in the Vaults of Knowledge. Destroying this building will eradicate the data stored inside."
  building_paragon_memory_vaults_machine_desc:1 "Every sensation and data point experienced by our units is stored in these Vaults. This incredible database is used to accelerate learning when a new autonomous unit is created. Destroying this building will eliminate the data stored inside."
  building_paragon_memory_vaults_hive_desc:1 "The memories and sense impressions of every autonomous drone is stored in the Vaults of Knowledge, waiting to be imprinted in the minds of fresh drones. Destroying this building will eradicate the data stored inside."
- building_corporate_clinics:0 "Corporate Clinic"
+ building_corporate_clinics:0 "คลินิกของบริษัท"
  building_corporate_clinics_desc:1 "A private medical company employing local and off-world medical specialists to provide services for a reasonable fee."
  building_corporate_clinics_effect:1 "$r_amenities$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+1§!\n$r_trade_value$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+2§!"
- civic_tooltip_memory_vault_effects:1 "Can build unique £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YDestiny Traits§! acquired."
+ civic_tooltip_memory_vault_effects:1 "สามารถสร้างสิ่งปลูกสร้างที่มีลักษณะเฉพาะ £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! ผลิต $r_unity$ และเพิ่ม §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! ขึ้นอยู่กับ §Yคุณลักษณะระดับสูง(โชควาสนา)§! ที่มี"
  civic_memory_vault:0 "ห้องนิรภัยสำหรับเก็บความรู้"
  civic_memory_vault_desc:1 "The knowledge, principles, and experiences of exceptional people are digitized and accumulated in the Vaults of Knowledge. Citizens can access this source of wisdom and experience to learn from the ghosts of the past."
- civic_tooltip_memory_vault_corporate_effects:1 "Can build unique £building£§Y $building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and $r_trade_value$ based on §YDestiny Traits§! acquired."
+ civic_tooltip_memory_vault_corporate_effects:1 "สามารถสร้างสิ่งปลูกสร้างที่มีลักษณะเฉพาะ £building£§Y $building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! ผลิต $r_unity$ และ $r_trade_value$ ขึ้นอยู่กับ §Yณลักษณะระดับสูง(โชควาสนา)§! ที่มี"
  civic_memory_vault_corporate:1 "คลังเก็บความรู้"
  civic_memory_vault_corporate_desc:1 "The knowledge, principles, and experiences of exceptional people are digitized and accumulated in the Vaults of Knowledge. Citizens can access this source of wisdom and experience to learn from the ghosts of the past. For a price, of course."
- civic_tooltip_memory_vault_machine_effects:1 "Can build unique £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YLeaders§! who acquired §YLevel 8§!."
+ civic_tooltip_memory_vault_machine_effects:1 "สามารถสร้างสิ่งปลูกสร้างที่มีลักษณะเฉพาะ £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! ผลิต $r_unity$ และเพิ่ม §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! ขึ้นอยู่กับ §Yผู้นำ§! ที่มี §Yเลเวล 8§!"
  civic_memory_vault_machine:1 "แคชเก็บข้อมูลประสบการณ์"
  civic_memory_vault_machine_desc:0 "This machine intelligence was developed with the goal of digitizing and storing data and experiences in order to analyze, learn from, and use it for its own improvement."
- civic_tooltip_memory_vault_hive_effects:3 "Can build unique £building£§Y $building_paragon_memory_vaults$§!\n£building£ §Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YLeaders§! who acquired §YLevel 8§!."
+ civic_tooltip_memory_vault_hive_effects:3 "สามารถสร้างสิ่งปลูกสร้างที่มีลักษณะเฉพาะ £building£§Y $building_paragon_memory_vaults$§!\n£building£ §Y$building_paragon_memory_vaults$§! ผลิต $r_unity$ และเพิ่ม §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! ขึ้นอยู่กับ §Yผู้นำ§! ที่มี §Yเลเวล 8§!"
  civic_memory_vault_hive:1 "ห้องนิรภัยระบบประสาท"
  civic_memory_vault_hive_desc:0 "This hive is focused on introspection and learning from the lives of autonomous drones in the galaxy. It extracts memories through the storage and dissolution of brain tissue, through which it can implement partial memories into a freshly prepared drone."
- civic_tooltip_crusader_spirit_effects:1 "§Y$commander_plural_with_icon$§! start with the §Y$leader_trait_crusader$§! Trait\nCan only use §YLiberation Wars§! policy"
+ civic_tooltip_crusader_spirit_effects:1 "- §Y$commander_plural_with_icon$§! มีคุณลักษณะ §Y$leader_trait_crusader$§!\n- สามารถใช้นโยบาย(ปรัชญาสงคราม)ได้เพียงแค่ §Yสงครามปลดปล่อย§! เท่านั้น"
  civic_crusader_spirit:0 "จิตวิญญาณครูเซเดอร์"
  civic_crusader_spirit_desc:0 "The lack of guidance creates weak minds - which easily succumb to corruption and plunge into decadence. This society has assumed the self-imposed mantle of bringing "enlightenment" to the masses through aggressive proselytizing."
- civic_tooltip_crusader_spirit_corporate_effects:3 "§Y$commander_plural_with_icon$§! start with the §Y$leader_trait_corsair$§! trait\nHas the '§Y$casus_belli_cb_pirate_raid$§!' casus belli on all other empires"
+ civic_tooltip_crusader_spirit_corporate_effects:3 "- §Y$commander_plural_with_icon$§! มีคุณลักษณะ §Y$leader_trait_corsair$§!\n- มีเหตุผลทำสงคราม '§Y$casus_belli_cb_pirate_raid$§!' กับจักรวรรดิอื่นๆทั้งหมด"
  civic_crusader_spirit_corporate:0 "สารตรา (ใบอนุญาตปล้น)"
  civic_crusader_spirit_corporate_desc:0 "To combat space piracy and safeguard its borders, this megacorporation utilizes notorious pirates as military advisors and commanders for their fleets."
  casus_belli_cb_pirate_raid:0 "การจู่โจมของโจรสลัด"
@@ -1467,13 +1467,13 @@
  civic_task_delegation_corporate_desc:1 "This megacorporation operates on a highly optimized and robust system of delegation. Such an approach means that a given task is always performed by the most qualified worker."
  civic_private_healthcare_corporate:1 "รัฐยาและเภสัชกรรม"
  civic_private_healthcare_corporate_desc:1 "A strong nation is a healthy nation. This megacorporation maintains a robust economy through experimental drugs, highly privatized clinics, and aggressive marketing campaigns."
- civic_tooltip_civic_private_healthcare_corporate_effects:3 "- £building£ §YCapital Buildings§! ให้ §G+1§! งาน  £job_healthcare£ §Y$job_healthcare$§!\n- $r_amenities$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+2§!\n- $r_trade_value$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+4§!\n- สามารถสร้าง £building£ §Y$building_corporate_clinics$§! $BRANCH_OFFICE_BUILDING$"
+ civic_tooltip_civic_private_healthcare_corporate_effects:3 "- £building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! ให้ §G+1§! งาน  £job_healthcare£ §Y$job_healthcare$§!\n- $r_amenities$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+2§!\n- $r_trade_value$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+4§!\n- สามารถสร้าง £building£ §Y$building_corporate_clinics$§! $BRANCH_OFFICE_BUILDING$"
  civic_machine_upkeep_twister:1 "วงจรผู้ปกครองสูงสุด"
  civic_machine_upkeep_twister_desc:1 "Units produced by this machine intelligence come equipped with autonomous decision-making software. More efficient and effective than older models, these units nevertheless require greater power input."
  civic_tooltip_machine_upkeep_twister_effects:2 "เปลี่ยนค่าบำรุงรักษาผู้นำจากเดิม §Y1§! $r_unity$ เป็น §Y2§! $r_energy$ แทน"
  civic_hive_upkeep_twister:0 "โดรนอัตโนมัติ"
  civic_hive_upkeep_twister_desc:1 "The hypermetabolic drones evolved in this colony possess increased autonomy. While decision-making and situation assessment are enhanced, these drones require an increased intake of digestible materials."
- civic_tooltip_hive_upkeep_twister_effects:2 "Change §Y1§! Base $r_unity$ Leader Upkeep to §Y2§! $r_food$ (or $r_minerals$)"
+ civic_tooltip_hive_upkeep_twister_effects:2 "เปลี่ยนค่าบำรุงรักษาพื้นฐานของผู้นำ §Y1§! $r_unity$ เป็น §Y2§! $r_food$ (หรือ $r_minerals$)"
  civic_heroic_tales:0 "วีรบุรุษในตำนาน"
  civic_heroic_tales_desc:1 "The legendary heroes of the past inspire this civilizations young people to achieve the extraordinary. As role models, government officials are expected to embody these ideals."
  civic_heroic_tales_effects:0 "$tr_aptitude_adopt_desc$"
