--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -695,7 +695,7 @@
  councilor_state:0 "รัฐมนตรีอาวุโสแห่งรัฐ"
  councilor_state_female:0 "$councilor_state$"
  councilor_state_desc:0 "The $TITLE$ is in charge of diplomatic affairs."
- BLOCKS_COUNCILOR_STATE: "Blocks the §Y$councilor_state$§! Council Position"
+ BLOCKS_COUNCILOR_STATE: "ไม่ให้มีตำแหน่ง §Y$councilor_state$§! ในสภา"
  councilor_agrarian_idyll:0 "เกษตรกรอาวุโส"
  councilor_agrarian_idyll_female:0 "$councilor_agrarian_idyll$"
  councilor_agrarian_idyll_desc:0 "The $TITLE$ oversees farming traditions and practices."
@@ -950,18 +950,18 @@
  councilor_dystopian_society:1 "ผู้ดูแลหลัก"
  councilor_dystopian_society_female:0 "$councilor_dystopian_society$"
  councilor_dystopian_society_desc:2 "The Primary Overseer seeks out corruption and extinguishes it before it can spread."
- councilor_worker_coop: "General Secretary of Unions"
+ councilor_worker_coop: "เลขาธิการสหภาพแรงงาน"
  councilor_worker_coop_female: "$councilor_worker_coop$"
  councilor_worker_coop_desc: "The democratically-appointed $TITLE$ ensures clear and concise communication between executive committees and our worker members."
- councilor_worker_coop_custom_modifier_desc:1 "§Y$job_steward_plural_with_icon$§! produce §G+0.25§! $r_trade_value$ and §G+0.25§! $r_amenities$"
- councilor_gestalt_growth:0 "Growth Node"
- councilor_gestalt_growth_desc:1 "The $TITLE$ is where important hive decisions are made."
- councilor_gestalt_cognitive:0 "Cognitive Node"
- councilor_gestalt_cognitive_desc:0 "The $TITLE$ is where we develop our understanding of the world around us."
- councilor_gestalt_legion:1 "Legion Node"
- councilor_gestalt_legion_desc:1 "The $TITLE$ is where decisions concerning galactic expansion are made."
- councilor_gestalt_regulatory:2 "Regulatory Node"
- councilor_gestalt_regulatory_desc:1 "The $TITLE$ is where we counter the emergence of deviant consciousnesses."
+ councilor_worker_coop_custom_modifier_desc:1 "§Y$job_steward_plural_with_icon$§! ผลิต $r_trade_value$ §G+0.25§! และ $r_amenities$ §G+0.25§!"
+ councilor_gestalt_growth:0 "โหนดการเพิ่มจำนวน"
+ councilor_gestalt_growth_desc:1 "$TITLE$ คือที่ที่มีการตัดสินใจหลายๆสิ่งที่สำคัญๆ"
+ councilor_gestalt_cognitive:0 "โหนดความรู้ความเข้าใจ"
+ councilor_gestalt_cognitive_desc:0 "$TITLE$ คือที่ที่เราพัฒนาความเข้าใจเกี่ยวกับดาวรอบตัวเรา"
+ councilor_gestalt_legion:1 "โหนดการทหาร"
+ councilor_gestalt_legion_desc:1 "$TITLE$ คือการตัดสินใจเกี่ยวกับการขยายตัวในกาแล็กซี"
+ councilor_gestalt_regulatory:2 "โหนดควบคุมบังคับ"
+ councilor_gestalt_regulatory_desc:1 "$TITLE$ เป็นที่ที่เราตอบโต้การเกิดขึ้นของจิตสำนึกที่เบี่ยงเบน"
  couniclor_machine_governor:0 "Expansion Directive"
  couniclor_machine_governor_desc:0 "$TITLE$: Units shall aquire all available worlds."
  couniclor_machine_scientist:0 "Exploration Directive"
@@ -1129,7 +1129,7 @@
  council_agenda_agenda_leadership_conditioning_desc:0 "ผู้นำของเราทุกคนใช้เวลาและความพยายามอย่างมากในการทบทวนและฝึกพฤติกรรมใหม่"
  council_agenda_agenda_leadership_conditioning_desc_hive:1 "ทุกแง่มุมที่เป็นเอกลักษณ์และความเมตตาของผู้นำของเราถูกรวบรวมและรวมเป็นหนึ่งเดียวในจิตสำนึกที่สูงขึ้นของเรา"
  council_agenda_agenda_leadership_conditioning_desc_machine:0 "กระบวนการที่ไม่ได้มาตรฐานที่ดีที่สุดทั้งหมดจากยูนิตผู้นำ จะได้รับการวิเคราะห์ กลั่นกรองและรวมเข้ากับแกนหลักของเราในที่สุด"
- council_agenda_agenda_leadership_conditioning_effect: "§Y$@agenda_leadership_conditioning_exp_reward|0$§! Experience will be shared between all §YLeaders§! below §YSkill Level 10§!"
+ council_agenda_agenda_leadership_conditioning_effect: "§Yประสบการณ์ $@agenda_leadership_conditioning_exp_reward|0$§! จะถูกแชร์ให้กับทุกๆ §Yผู้นำ§! ที่มี §Yสกิลเลเวต่ำกว่า 10§!"
  agenda_leadership_conditioning_finish:0 "$council_agenda_agenda_leadership_conditioning_name$ $agenda_ref$"
  agenda_leadership_conditioning_finish_desc:0 "A positive long term effect from the conditioning."
  council_agenda_agenda_pioneer_politics_name:0 "นักบุกเบิกการเมือง"
@@ -1190,20 +1190,20 @@
  council_agenda_agenda_self_maintenance_desc:1 "อนุญาตการทำคลัสเตอร์และการแพตช์โปรโตคอลการปรับสภาพแวดล้อม"
  agenda_self_maintenance_finish:0 "$council_agenda_agenda_self_maintenance_name$ $agenda_ref$"
  agenda_self_maintenance_finish_desc:0 "$council_agenda_agenda_self_maintenance_desc$"
- council_agenda_agenda_gestalt_boost_growth_name:0 "Growth Revision"
- council_agenda_agenda_gestalt_boost_growth_desc:0 "Coordinating our drones and colonies must be prioritized."
+ council_agenda_agenda_gestalt_boost_growth_name:0 "การทบทวนเพิ่มจำนวน"
+ council_agenda_agenda_gestalt_boost_growth_desc:0 "การประสานงานโดรนและอาณานิคมของเราจะต้องได้รับการจัดลำดับความสำคัญ"
  agenda_gestalt_boost_growth_finish:0 "$council_agenda_agenda_gestalt_boost_growth_name$ $agenda_ref$"
  agenda_gestalt_boost_growth_finish_desc:0 "$council_agenda_agenda_gestalt_boost_growth_desc$"
- council_agenda_agenda_gestalt_boost_cognitive_name:0 "Cognitive Revision"
- council_agenda_agenda_gestalt_boost_cognitive_desc:1 "Analysis and existential understanding must be prioritized."
+ council_agenda_agenda_gestalt_boost_cognitive_name:0 "การทบทวนความรู้ความเข้าใจ"
+ council_agenda_agenda_gestalt_boost_cognitive_desc:1 "การวิเคราะห์และความเข้าใจที่มีอยู่จะต้องจัดลำดับความสำคัญ"
  agenda_gestalt_boost_cognitive_finish:0 "$council_agenda_agenda_gestalt_boost_cognitive_name$ $agenda_ref$"
  agenda_gestalt_boost_cognitive_finish_desc:0 "$council_agenda_agenda_gestalt_boost_cognitive_desc$"
- council_agenda_agenda_gestalt_boost_regulatory_name:0 "Order Revision"
- council_agenda_agenda_gestalt_boost_regulatory_desc:1 "Preemptive measures must be prioritized."
+ council_agenda_agenda_gestalt_boost_regulatory_name:0 "การทบทวนคำสั่ง"
+ council_agenda_agenda_gestalt_boost_regulatory_desc:1 "มาตรการป้องกันจะต้องได้รับการจัดลำดับความสำคัญ"
  agenda_gestalt_boost_regulatory_finish:0 "$council_agenda_agenda_gestalt_boost_regulatory_name$ $agenda_ref$"
  agenda_gestalt_boost_regulatory_finish_desc:0 "$council_agenda_agenda_gestalt_boost_regulatory_desc$"
- council_agenda_agenda_gestalt_boost_legion_name:0 "Expansion Revision"
- council_agenda_agenda_gestalt_boost_legion_desc:0 "Controlling the boundaries of our territory in space must be prioritized."
+ council_agenda_agenda_gestalt_boost_legion_name:0 "การทบทวนการขยาย"
+ council_agenda_agenda_gestalt_boost_legion_desc:0 "การควบคุมขอบเขตอาณาเขตของเราในอวกาศจะต้องได้รับการจัดลำดับความสำคัญ"
  agenda_gestalt_boost_legion_finish:0 "$council_agenda_agenda_gestalt_boost_legion_name$ $agenda_ref$"
  agenda_gestalt_boost_legion_finish_desc:0 "$council_agenda_agenda_gestalt_boost_legion_desc$"
  council_agenda_agenda_gestalt_purge_traits_name:0 "การแบ่งครึ่งและแก้ไขให้ถูกต้อง"
@@ -1234,39 +1234,39 @@
  mod_restored_cognitive_node_bonus_skill: "Restored $councilor_gestalt_cognitive_with_icon$ Additional Skill"
  create_new_node: "\nสิ่งนี้จะสร้าง §Y[GetName]§! ใหม่ สกิล [GetRestoredNodeSkill]"
  hive_restore_node_effect: "This Node will be culled.$create_new_node$"
- council_agenda_agenda_hive_restore_growth_name: "Cull $councilor_gestalt_growth$"
+ council_agenda_agenda_hive_restore_growth_name: "คัดเลือก $councilor_gestalt_growth$"
  council_agenda_agenda_hive_restore_growth_desc: "Our $councilor_gestalt_growth$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
- council_agenda_agenda_hive_restore_cognitive_name: "Cull $councilor_gestalt_cognitive$"
+ council_agenda_agenda_hive_restore_cognitive_name: "คัดเลือก $councilor_gestalt_cognitive$"
  council_agenda_agenda_hive_restore_cognitive_desc: "Our $councilor_gestalt_cognitive$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
- council_agenda_agenda_hive_restore_legion_name: "Cull $councilor_gestalt_legion$"
+ council_agenda_agenda_hive_restore_legion_name: "คัดเลือก $councilor_gestalt_legion$"
  council_agenda_agenda_hive_restore_legion_desc: "Our $councilor_gestalt_legion$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
- council_agenda_agenda_hive_restore_regulatory_name: "Cull $councilor_gestalt_regulatory$"
+ council_agenda_agenda_hive_restore_regulatory_name: "คัดเลือก $councilor_gestalt_regulatory$"
  council_agenda_agenda_hive_restore_regulatory_desc: "Our $councilor_gestalt_regulatory$ is no longer suited for our purpose, it shall be culled and a replacement Node shall be grown."
  machine_restore_node_effect: "This Node will be reformatted.$create_new_node$"
- council_agenda_agenda_machine_restore_growth_name: "Reformat $councilor_gestalt_growth$"
- council_agenda_agenda_machine_restore_growth_desc: "Our $councilor_gestalt_growth$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
- council_agenda_agenda_machine_restore_cognitive_name: "Reformat $councilor_gestalt_cognitive$"
- council_agenda_agenda_machine_restore_cognitive_desc: "Our $councilor_gestalt_cognitive$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
- council_agenda_agenda_machine_restore_legion_name: "Reformat $councilor_gestalt_legion$"
- council_agenda_agenda_machine_restore_legion_desc: "Our $councilor_gestalt_legion$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
- council_agenda_agenda_machine_restore_regulatory_name: "Reformat $councilor_gestalt_regulatory$"
- council_agenda_agenda_machine_restore_regulatory_desc: "Our $councilor_gestalt_regulatory$ is no longer suited for our purpose, it shall be reformatted and restored to the last valid backup."
+ council_agenda_agenda_machine_restore_growth_name: "ฟอร์แมต $councilor_gestalt_growth$ ใหม่"
+ council_agenda_agenda_machine_restore_growth_desc: "$councilor_gestalt_growth$ของเราไม่เหมาะกับวัตถุประสงค์ของเราอีกต่อไป โหนดนั้นจะต้องได้รับการฟอร์แมตใหม่และกู้คืนเป็นข้อมูลสำรองที่ถูกต้องครั้งล่าสุด"
+ council_agenda_agenda_machine_restore_cognitive_name: "ฟอร์แมต $councilor_gestalt_cognitive$ ใหม่"
+ council_agenda_agenda_machine_restore_cognitive_desc: "$councilor_gestalt_cognitive$ของเราไม่เหมาะกับวัตถุประสงค์ของเราอีกต่อไป โหนดนั้นจะต้องได้รับการฟอร์แมตใหม่และกู้คืนเป็นข้อมูลสำรองที่ถูกต้องครั้งล่าสุด"
+ council_agenda_agenda_machine_restore_legion_name: "ฟอร์แมต $councilor_gestalt_legion$ ใหม่"
+ council_agenda_agenda_machine_restore_legion_desc: "$councilor_gestalt_legion$ของเราไม่เหมาะกับวัตถุประสงค์ของเราอีกต่อไป โหนดนั้นจะต้องได้รับการฟอร์แมตใหม่และกู้คืนเป็นข้อมูลสำรองที่ถูกต้องครั้งล่าสุด"
+ council_agenda_agenda_machine_restore_regulatory_name: "ฟอร์แมต $councilor_gestalt_regulatory$ ใหม่"
+ council_agenda_agenda_machine_restore_regulatory_desc: "$councilor_gestalt_regulatory$ของเราไม่เหมาะกับวัตถุประสงค์ของเราอีกต่อไป โหนดนั้นจะต้องได้รับการฟอร์แมตใหม่และกู้คืนเป็นข้อมูลสำรองที่ถูกต้องครั้งล่าสุด"
  restore_gestalt_councilor_effect_tooltip: "[GetRestoreNodeEffectTooltip]"
- tech_node_culling_1: "โหนดคัดเลือกขั้นพื้นฐาน"
+ tech_node_culling_1: "การคัดเลือกโหนดขั้นต้น"
  tech_node_culling_1_desc: "As the galactic stage evolves, so too should our operational instincts. Any evolutionary niche that no longer gives an advantage will be culled."
- tech_node_culling_2: "โหนดคัดเลือก"
+ tech_node_culling_2: "การคัดเลือกโหนดพื้นฐาน"
  tech_node_culling_2_desc: "Once removed, a replacement node is encouraged to grow within the proper environment. The secret is to feed it the previous node."
- tech_node_culling_3: "โหนดคัดเลือกขั้นสูง"
+ tech_node_culling_3: "การคัดเลือกโหนดขั้นสูง"
  tech_node_culling_3_desc: "Culling an entire node is very inefficient. Instead, just trim the divergent and unwanted lobes."
- AGENDA_UNLOCK_NODE_CULLING_TITLE: "§HUnlocks Agendas§!: Node Culling"
+ AGENDA_UNLOCK_NODE_CULLING_TITLE: "§Hปลดล็อกแผนการ§!: การคัดเลือกโหนด"
  AGENDA_UNLOCK_NODE_CULLING_DESC: "§YCulling Agendas§! allow us to replace Nodes that are no longer suited for our purpose. They will replace one of our current Nodes with a lower level Node."
- tech_node_reformatting_1: "โหนดกระบวนการรีฟอร์แมตขั้นพื้นฐาน"
+ tech_node_reformatting_1: "การรีฟอร์แมตโหนดขั้นต้น"
  tech_node_reformatting_1_desc: "Self-determination protocols and guidance algorithms can become obsolete in a rapidly developing galactic stage. Like any junk data, they shall be overwritten."
- tech_node_reformatting_2: "โหนดกระบวนการรีฟอร์แมต"
+ tech_node_reformatting_2: "การรีฟอร์แมตโหนดขั้นพื้นฐาน"
  tech_node_reformatting_2_desc: "Every self-iterating algorithm has its value. We will not allow important learning go to waste when restoring our leaders."
- tech_node_reformatting_3: "โหนดกระบวนการรีฟอร์แมตขั้นสูง"
+ tech_node_reformatting_3: "การรีฟอร์แมตโหนดขั้นสูง"
  tech_node_reformatting_3_desc: "Using a failed piece of software to develop its successor enables quick reconstruction. Learning from faulty memory pathways generates even more advanced council directives."
- AGENDA_UNLOCK_NODE_REFORMATTING_TITLE: "§HUnlocks Agendas§!: Node Reformatting"
+ AGENDA_UNLOCK_NODE_REFORMATTING_TITLE: "§Hปลดล็อกแผนการ§!: กระบวนการรีฟอร์แมตโหนด"
  AGENDA_UNLOCK_NODE_REFORMATTING_DESC: "§YReformatting Agendas§! allow us to replace Nodes that are no longer suited for our purpose. They will replace one of our current Nodes with a lower level Node."
  TRAIT_KEY_POSTFIX:0 "[GetTraitKeyPostfix]"
  CLICK_TO_EXPAND:1 "คลิกเพื่อขยาย"
